@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2015 IBM Corporation and others.
+ * Copyright (c) 2007, 2009 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -16,7 +16,6 @@ package org.eclipse.core.databinding;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Set;
 
 import org.eclipse.core.databinding.observable.IObservable;
@@ -37,7 +36,7 @@ public class ObservablesManager {
 
 	private Set managedObservables = new IdentitySet();
 	private Set excludedObservables = new IdentitySet();
-	private Map<DataBindingContext, Pair> contexts = new HashMap<>();
+	private Map contexts = new HashMap();
 
 	/**
 	 * Create a new observables manager.
@@ -82,8 +81,8 @@ public class ObservablesManager {
 	public void addObservablesFromContext(DataBindingContext context,
 			boolean trackTargets, boolean trackModels) {
 		if (trackTargets || trackModels) {
-			contexts.put(context, new Pair(Boolean.valueOf(trackTargets),
-					Boolean.valueOf(trackModels)));
+			contexts.put(context, new Pair(new Boolean(trackTargets),
+					new Boolean(trackModels)));
 		}
 	}
 
@@ -95,7 +94,7 @@ public class ObservablesManager {
 	 * <a href="https://bugs.eclipse.org/278550">bug 278550</a>. If we cannot
 	 * find a way to make this API work, it will be deprecated as of 3.6.</em>
 	 * </p>
-	 *
+	 * 
 	 * @param runnable
 	 *            the runnable to execute
 	 * @since 1.2
@@ -112,9 +111,9 @@ public class ObservablesManager {
 	public void dispose() {
 		Set observables = new IdentitySet();
 		observables.addAll(managedObservables);
-		for (Entry<DataBindingContext, Pair> entry : contexts.entrySet()) {
-			DataBindingContext context = entry.getKey();
-			Pair trackModelsOrTargets = entry.getValue();
+		for (Iterator it = contexts.keySet().iterator(); it.hasNext();) {
+			DataBindingContext context = (DataBindingContext) it.next();
+			Pair trackModelsOrTargets = (Pair) contexts.get(context);
 			boolean disposeTargets = ((Boolean) trackModelsOrTargets.a)
 					.booleanValue();
 			boolean disposeModels = ((Boolean) trackModelsOrTargets.b)
