@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2015 Angelo Zerr and others.
+ * Copyright (c) 2008, 2009 Angelo Zerr and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -9,30 +9,19 @@
  *     Angelo Zerr <angelo.zerr@gmail.com> - initial API and implementation
  *     IBM Corporation
  *     Kai Toedter - added radial gradient support
- *     Robin Stocker - Bug 420035 - [CSS] Support SWT color constants in gradients
- *     Stefan Winkler <stefan@winklerweb.net> - Bug 459961
  *******************************************************************************/
 package org.eclipse.e4.ui.css.swt.helpers;
 
-import static org.eclipse.e4.ui.css.swt.helpers.ThemeElementDefinitionHelper.normalizeId;
-
-import java.lang.reflect.Field;
-import java.lang.reflect.Modifier;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.regex.Pattern;
+
 import org.eclipse.e4.ui.css.core.css2.CSS2ColorHelper;
 import org.eclipse.e4.ui.css.core.css2.CSS2RGBColorImpl;
 import org.eclipse.e4.ui.css.core.dom.properties.Gradient;
 import org.eclipse.e4.ui.css.core.engine.CSSEngine;
-import org.eclipse.e4.ui.internal.css.swt.CSSActivator;
-import org.eclipse.e4.ui.internal.css.swt.definition.IColorAndFontProvider;
-import org.eclipse.swt.SWT;
-import org.eclipse.swt.custom.CTabFolder;
+import org.eclipse.e4.ui.css.core.resources.CSSResourcesHelpers;
+import org.eclipse.e4.ui.css.core.resources.IResourcesRegistry;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.RGB;
-import org.eclipse.swt.graphics.RGBA;
-import org.eclipse.swt.widgets.Control;
 import org.eclipse.swt.widgets.Display;
 import org.w3c.dom.css.CSSPrimitiveValue;
 import org.w3c.dom.css.CSSValue;
@@ -40,16 +29,11 @@ import org.w3c.dom.css.CSSValueList;
 import org.w3c.dom.css.RGBColor;
 
 public class CSSSWTColorHelper {
-	public static final String COLOR_DEFINITION_MARKER = "#";
-
-	private static final Pattern HEX_COLOR_VALUE_PATTERN = Pattern.compile("#[a-fA-F0-9]{6}");
-
-	private static Field[] cachedFields;
 
 	/*--------------- SWT Color Helper -----------------*/
 
 	public static Color getSWTColor(RGBColor rgbColor, Display display) {
-		RGBA rgb = getRGBA(rgbColor);
+		RGB rgb = getRGB(rgbColor);
 		return new Color(display, rgb);
 	}
 
@@ -57,139 +41,50 @@ public class CSSSWTColorHelper {
 		if (value.getCssValueType() != CSSValue.CSS_PRIMITIVE_VALUE) {
 			return null;
 		}
-		Color color = display.getSystemColor(SWT.COLOR_BLACK);
-		RGBA rgba = getRGBA((CSSPrimitiveValue) value, display);
-		if (rgba != null) {
-			color = new Color(display, rgba.rgb.red, rgba.rgb.green, rgba.rgb.blue, rgba.alpha);
+		RGB rgb = getRGB((CSSPrimitiveValue) value);
+		if (rgb == null) {
+			return null;
 		}
+		Color color = new Color(display, rgb.red, rgb.green, rgb.blue);
 		return color;
 	}
 
-	private static RGBA getRGBA(CSSPrimitiveValue value, Display display) {
-		RGBA rgba = getRGBA(value);
-		if (rgba == null && display != null) {
-			String name = value.getStringValue();
-			if (hasColorDefinitionAsValue(name)) {
-				rgba = findColorByDefinition(name);
-			} else if (name.contains("-")) {
-				name = name.replace('-', '_');
-				rgba = process(display, name);
-			}
-		}
-		return rgba;
-	}
-
-	public static boolean hasColorDefinitionAsValue(CSSValue value) {
-		if (value.getCssValueType() == CSSValue.CSS_PRIMITIVE_VALUE) {
-			CSSPrimitiveValue primitiveValue = (CSSPrimitiveValue) value;
-			if (primitiveValue.getPrimitiveType() == CSSPrimitiveValue.CSS_STRING) {
-				return hasColorDefinitionAsValue(primitiveValue
-						.getStringValue());
-			}
-		}
-		return false;
-	}
-
-	public static boolean hasColorDefinitionAsValue(String name) {
-		if (name.startsWith(COLOR_DEFINITION_MARKER)) {
-			return !HEX_COLOR_VALUE_PATTERN.matcher(name).matches();
-		}
-		return false;
-	}
-
-	/**
-	 * Process the given string and return a corresponding RGBA object.
-	 *
-	 * @param value
-	 *            the SWT constant <code>String</code>
-	 * @return the value of the SWT constant, or <code>SWT.COLOR_BLACK</code> if
-	 *         it could not be determined
-	 */
-	private static RGBA process(Display display, String value) {
-		Field [] fields = getFields();
-		try {
-			for (Field field : fields) {
-				if (field.getName().equals(value)) {
-					return display.getSystemColor(field.getInt(null)).getRGBA();
-				}
-			}
-		} catch (IllegalArgumentException e) {
-			// no op - shouldnt happen. We check for static before calling
-			// getInt(null)
-		} catch (IllegalAccessException e) {
-			// no op - shouldnt happen. We check for public before calling
-			// getInt(null)
-		}
-		return  display.getSystemColor(SWT.COLOR_BLACK).getRGBA();
-	}
-
-	/**
-	 * Get the SWT constant fields.
-	 *
-	 * @return the fields
-	 * @since 3.3
-	 */
-	private static Field[] getFields() {
-		if (cachedFields == null) {
-			Class<?> clazz = SWT.class;
-			Field[] allFields = clazz.getDeclaredFields();
-			ArrayList<Field> applicableFields = new ArrayList<Field>(
-					allFields.length);
-
-			for (Field field : allFields) {
-				if (field.getType() == Integer.TYPE
-						&& Modifier.isStatic(field.getModifiers())
-						&& Modifier.isPublic(field.getModifiers())
-						&& Modifier.isFinal(field.getModifiers())
-						&& field.getName().startsWith("COLOR")) { //$NON-NLS-1$
-
-					applicableFields.add(field);
-				}
-			}
-			cachedFields = applicableFields.toArray(new Field [applicableFields.size()]);
-		}
-		return cachedFields;
-	}
-
-	public static RGBA getRGBA(String name) {
+	public static RGB getRGB(String name) {
 		RGBColor color = CSS2ColorHelper.getRGBColor(name);
 		if (color != null) {
-			return getRGBA(color);
+			return getRGB(color);
 		}
 		return null;
 	}
 
-	public static RGBA getRGBA(RGBColor color) {
-		return new RGBA((int) color.getRed().getFloatValue(
+	public static RGB getRGB(RGBColor color) {
+		return new RGB((int) color.getRed().getFloatValue(
 				CSSPrimitiveValue.CSS_NUMBER), (int) color.getGreen()
 				.getFloatValue(CSSPrimitiveValue.CSS_NUMBER), (int) color
-				.getBlue().getFloatValue(CSSPrimitiveValue.CSS_NUMBER),
-				// for now, we only support solid RGB colors in CSS - our CSS model
-				// as of now does not have an element for RGBAColor.
-				255);
+				.getBlue().getFloatValue(CSSPrimitiveValue.CSS_NUMBER));
 	}
 
-	public static RGBA getRGBA(CSSValue value) {
+	public static RGB getRGB(CSSValue value) {
 		if (value.getCssValueType() != CSSValue.CSS_PRIMITIVE_VALUE) {
 			return null;
 		}
-		return getRGBA((CSSPrimitiveValue) value);
+		return getRGB((CSSPrimitiveValue) value);
 	}
 
-	public static RGBA getRGBA(CSSPrimitiveValue value) {
-		RGBA rgba = null;
+	public static RGB getRGB(CSSPrimitiveValue value) {
+		RGB rgb = null;
 		switch (value.getPrimitiveType()) {
 		case CSSPrimitiveValue.CSS_IDENT:
 		case CSSPrimitiveValue.CSS_STRING:
 			String string = value.getStringValue();
-			rgba = getRGBA(string);
+			rgb = getRGB(string);
 			break;
 		case CSSPrimitiveValue.CSS_RGBCOLOR:
 			RGBColor rgbColor = value.getRGBColorValue();
-			rgba = getRGBA(rgbColor);
+			rgb = getRGB(rgbColor);
 			break;
 		}
-		return rgba;
+		return rgb;
 	}
 
 	public static Integer getPercent(CSSPrimitiveValue value) {
@@ -197,12 +92,12 @@ public class CSSSWTColorHelper {
 		switch (value.getPrimitiveType()) {
 		case CSSPrimitiveValue.CSS_PERCENTAGE:
 			percent = (int) value
-			.getFloatValue(CSSPrimitiveValue.CSS_PERCENTAGE);
+					.getFloatValue(CSSPrimitiveValue.CSS_PERCENTAGE);
 		}
-		return Integer.valueOf(percent);
+		return new Integer(percent);
 	}
 
-	public static Gradient getGradient(CSSValueList list, Display display) {
+	public static Gradient getGradient(CSSValueList list) {
 		Gradient gradient = new Gradient();
 		for (int i = 0; i < list.getLength(); i++) {
 			CSSValue value = list.item(i);
@@ -226,12 +121,9 @@ public class CSSSWTColorHelper {
 				case CSSPrimitiveValue.CSS_IDENT:
 				case CSSPrimitiveValue.CSS_STRING:
 				case CSSPrimitiveValue.CSS_RGBCOLOR:
-					RGBA rgba = getRGBA((CSSPrimitiveValue) value, display);
-					if (rgba != null) {
-						// note that in this call we lose the RGBA alpha
-						// component - we do currently not support alpha
-						// gradients
-						gradient.addRGB(rgba, (CSSPrimitiveValue) value);
+					RGB rgb = getRGB((CSSPrimitiveValue) value);
+					if (rgb != null) {
+						gradient.addRGB(rgb, (CSSPrimitiveValue) value);
 					} else {
 						//check for vertical gradient
 						gradient.setVertical(!value.getCssText().equals("false"));
@@ -246,17 +138,16 @@ public class CSSSWTColorHelper {
 		return gradient;
 	}
 
-	@SuppressWarnings("rawtypes")
-	public static Color[] getSWTColors(Gradient grad, Display display,
-			CSSEngine engine) throws Exception {
+	public static Color[] getSWTColors(Gradient grad, Display display, CSSEngine engine) {
 		List values = grad.getValues();
+		IResourcesRegistry registry = engine.getResourcesRegistry();
 		Color[] colors = new Color[values.size()];
-
-		for (int i = 0; i < values.size(); i++) {
+		
+		for (int i = 0; i < values.size(); i++) {		
 			CSSPrimitiveValue value = (CSSPrimitiveValue) values.get(i);
 			//We rely on the fact that when a gradient is created, it's colors are converted and in the registry
 			//TODO see bug #278077
-			Color color = (Color) engine.convert(value, Color.class, display);
+			Color color = (Color) registry.getResource(Color.class, CSSResourcesHelpers.getCSSPrimitiveValueKey(value));
 			colors[i] = color;
 		}
 		return colors;
@@ -268,7 +159,7 @@ public class CSSSWTColorHelper {
 		if (grad.getRGBs().size() == grad.getPercents().size() + 1) {
 			int[] percents = new int[grad.getPercents().size()];
 			for (int i = 0; i < percents.length; i++) {
-				int value = (grad.getPercents().get(i)).intValue();
+				int value = ((Integer) grad.getPercents().get(i)).intValue();
 				if (value < 0 || value > 100) {
 					// TODO this should be an exception because bad source
 					// format
@@ -294,8 +185,7 @@ public class CSSSWTColorHelper {
 	 */
 	private static int[] getDefaultPercents(Gradient grad) {
 		// Needed to avoid /0 in increment calc
-
-		if (grad.getRGBs().size() <= 1) {
+		if (grad.getRGBs().size() == 1) {
 			return new int[0];
 		}
 
@@ -320,53 +210,5 @@ public class CSSSWTColorHelper {
 		int green = color.green;
 		int blue = color.blue;
 		return new CSS2RGBColorImpl(red, green, blue);
-	}
-
-	private static RGBA findColorByDefinition(String name) {
-		IColorAndFontProvider provider = CSSActivator.getDefault().getColorAndFontProvider();
-		if (provider != null) {
-			RGB rgb = provider.getColor(normalizeId(name.substring(1)));
-			return new RGBA(rgb.red, rgb.green, rgb.blue, 255);
-		}
-		return null;
-	}
-
-	/** Simplify testing for color equality */
-	public static boolean equals(Color c1, Color c2) {
-		if (c1 == c2) {
-			return true;
-		}
-		if (c1 == null || c2 == null) {
-			return false;
-		}
-		return c1.equals(c2);
-	}
-
-	/** Helper function to avoid setting colors unnecessarily */
-	public static void setForeground(Control control, Color newColor) {
-		if (!equals(control.getForeground(), newColor)) {
-			control.setForeground(newColor);
-		}
-	}
-
-	/** Helper function to avoid setting colors unnecessarily */
-	public static void setBackground(Control control, Color newColor) {
-		if (!equals(control.getBackground(), newColor)) {
-			control.setBackground(newColor);
-		}
-	}
-
-	/** Helper function to avoid setting colors unnecessarily */
-	public static void setSelectionForeground(CTabFolder folder, Color newColor) {
-		if (!equals(folder.getSelectionForeground(), newColor)) {
-			folder.setSelectionForeground(newColor);
-		}
-	}
-
-	/** Helper function to avoid setting colors unnecessarily */
-	public static void setSelectionBackground(CTabFolder folder, Color newColor) {
-		if (!equals(folder.getSelectionBackground(), newColor)) {
-			folder.setSelectionBackground(newColor);
-		}
 	}
 }
