@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2007 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -23,21 +23,18 @@ import org.eclipse.swt.widgets.Menu;
  * the action's semantics.
  * </p>
  */
-public abstract class Action extends AbstractAction {
+public abstract class Action extends AbstractAction implements IAction {
 
 	private static final IMenuCreator VAL_DROP_DOWN_MENU = new IMenuCreator() {
-		@Override
 		public void dispose() {
 			// do nothing
 		}
 
-		@Override
 		public Menu getMenu(Control parent) {
 			// do nothing
 			return null;
 		}
 
-		@Override
 		public Menu getMenu(Menu parent) {
 			// do nothing
 			return null;
@@ -50,9 +47,9 @@ public abstract class Action extends AbstractAction {
 	 */
 	private static final String VAL_PUSH_BTN = "PUSH_BTN"; //$NON-NLS-1$
 
-	private static final Integer VAL_RADIO_BTN_OFF = Integer.valueOf(0);
+	private static final Integer VAL_RADIO_BTN_OFF = new Integer(0);
 
-	private static final Integer VAL_RADIO_BTN_ON = Integer.valueOf(1);
+	private static final Integer VAL_RADIO_BTN_ON = new Integer(1);
 
 	private static final Boolean VAL_TOGGLE_BTN_OFF = Boolean.FALSE;
 
@@ -60,7 +57,7 @@ public abstract class Action extends AbstractAction {
 
 	/**
 	 * Converts an accelerator key code to a string representation.
-	 *
+	 * 
 	 * @param keyCode
 	 *            the key code to be translated
 	 * @return a string representation of the key code
@@ -72,7 +69,7 @@ public abstract class Action extends AbstractAction {
 	/**
 	 * Parses the given accelerator text, and converts it to an accelerator key
 	 * code.
-	 *
+	 * 
 	 * @param acceleratorText
 	 *            the accelerator text
 	 * @return the SWT key code, or 0 if there is no accelerator
@@ -105,7 +102,7 @@ public abstract class Action extends AbstractAction {
 	 * <li><code>"F1"</code>, <code>"F2"</code> through <code>"F12"</code></li>
 	 * </ul>
 	 * </p>
-	 *
+	 * 
 	 * @param token
 	 *            the key name
 	 * @return the SWT key code, <code>-1</code> if no match was found
@@ -121,7 +118,7 @@ public abstract class Action extends AbstractAction {
 	 * the key code is not an SWT code (for example if it a key code for the key
 	 * 'S'), a string containing a character representation of the key code is
 	 * returned.
-	 *
+	 * 
 	 * @param keyCode
 	 *            the key code to be translated
 	 * @return the string representation of the key code
@@ -138,7 +135,7 @@ public abstract class Action extends AbstractAction {
 	 * ignored): <code>"CTRL"</code>, <code>"SHIFT"</code>,
 	 * <code>"ALT"</code>, and <code>"COMMAND"</code>. The given modifier
 	 * key name is converted to upper case before comparison.
-	 *
+	 * 
 	 * @param token
 	 *            the modifier key name
 	 * @return the SWT modifier bit, or <code>0</code> if no match was found
@@ -152,7 +149,7 @@ public abstract class Action extends AbstractAction {
 	 * Returns a string representation of an SWT modifier bit (SWT.CTRL,
 	 * SWT.ALT, SWT.SHIFT, and SWT.COMMAND). Returns <code>null</code> if the
 	 * key code is not an SWT modifier bit.
-	 *
+	 * 
 	 * @param keyCode
 	 *            the SWT modifier bit to be translated
 	 * @return the string representation of the SWT modifier bit, or
@@ -167,9 +164,8 @@ public abstract class Action extends AbstractAction {
 	/**
 	 * Convenience method for removing any optional accelerator text from the
 	 * given string. The accelerator text appears at the end of the text, and is
-	 * separated from the main part by the last tab character <code>'\t'</code>
-	 * (or the last <code>'@'</code> if there is no tab).
-	 *
+	 * separated from the main part by a single tab character <code>'\t'</code>.
+	 * 
 	 * @param text
 	 *            the text
 	 * @return the text sans accelerator
@@ -182,11 +178,11 @@ public abstract class Action extends AbstractAction {
 	 * Convenience method for removing any mnemonics from the given string. For
 	 * example, <code>removeMnemonics("&Open")</code> will return
 	 * <code>"Open"</code>.
-	 *
+	 * 
 	 * @param text
 	 *            the text
 	 * @return the text sans mnemonics
-	 *
+	 * 
 	 * @since 3.0
 	 */
 	public static String removeMnemonics(String text) {
@@ -271,7 +267,7 @@ public abstract class Action extends AbstractAction {
 	/**
 	 * Creates a new action with the given text and no image. Calls the zero-arg
 	 * constructor, then <code>setText</code>.
-	 *
+	 * 
 	 * @param text
 	 *            the string used as the text for the action, or
 	 *            <code>null</code> if there is no text
@@ -286,7 +282,7 @@ public abstract class Action extends AbstractAction {
 	 * Creates a new action with the given text and image. Calls the zero-arg
 	 * constructor, then <code>setText</code> and
 	 * <code>setImageDescriptor</code>.
-	 *
+	 * 
 	 * @param text
 	 *            the action's text, or <code>null</code> if there is no text
 	 * @param image
@@ -302,7 +298,7 @@ public abstract class Action extends AbstractAction {
 
 	/**
 	 * Creates a new action with the given text and style.
-	 *
+	 * 
 	 * @param text
 	 *            the action's text, or <code>null</code> if there is no text
 	 * @param style
@@ -329,17 +325,24 @@ public abstract class Action extends AbstractAction {
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public int getAccelerator() {
 		return accelerator;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 * 
+	 */
 	public String getActionDefinitionId() {
 		return actionDefinitionId;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public String getDescription() {
 		if (description != null) {
 			return description;
@@ -347,32 +350,44 @@ public abstract class Action extends AbstractAction {
 		return getToolTipText();
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public ImageDescriptor getDisabledImageDescriptor() {
 		return disabledImage;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public HelpListener getHelpListener() {
 		return helpListener;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public ImageDescriptor getHoverImageDescriptor() {
 		return hoverImage;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public String getId() {
 		return id;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public ImageDescriptor getImageDescriptor() {
 		return image;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public IMenuCreator getMenuCreator() {
 		// The default drop down menu value is only used
 		// to mark this action requested style. So do not
@@ -386,7 +401,9 @@ public abstract class Action extends AbstractAction {
 		return null;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public int getStyle() {
 		// Infer the style from the value field.
 		if (value == VAL_PUSH_BTN || value == null) {
@@ -406,27 +423,37 @@ public abstract class Action extends AbstractAction {
 		return AS_PUSH_BUTTON;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public String getText() {
 		return text;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public String getToolTipText() {
 		return toolTipText;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public boolean isChecked() {
 		return value == VAL_TOGGLE_BTN_ON || value == VAL_RADIO_BTN_ON;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public boolean isEnabled() {
 		return enabled;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public boolean isHandled() {
 		return true;
 	}
@@ -434,7 +461,7 @@ public abstract class Action extends AbstractAction {
 	/**
 	 * Reports the outcome of the running of this action via the
 	 * {@link IAction#RESULT} property.
-	 *
+	 * 
 	 * @param success
 	 *            <code>true</code> if the action succeeded and
 	 *            <code>false</code> if the action failed or was not completed
@@ -453,7 +480,6 @@ public abstract class Action extends AbstractAction {
 	 * information from the triggering event, or override
 	 * <code>runWithEvent(Event)</code> if they do.
 	 */
-	@Override
 	public void run() {
 		// do nothing
 	}
@@ -463,27 +489,32 @@ public abstract class Action extends AbstractAction {
 	 * the event argument, and simply calls <code>run()</code>. Subclasses
 	 * should override this method if they need information from the triggering
 	 * event, or override <code>run()</code> if not.
-	 *
+	 * 
 	 * @param event
 	 *            the SWT event which triggered this action being run
 	 * @since 2.0
 	 */
-	@Override
 	public void runWithEvent(Event event) {
 		run();
 	}
 
-	@Override
+	/*
+	 * @see IAction#setAccelerator(int)
+	 */
 	public void setAccelerator(int keycode) {
 		this.accelerator = keycode;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public void setActionDefinitionId(String id) {
 		actionDefinitionId = id;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public void setChecked(boolean checked) {
 		Object newValue = null;
 
@@ -509,7 +540,9 @@ public abstract class Action extends AbstractAction {
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public void setDescription(String text) {
 
 		if ((description == null && text != null)
@@ -522,7 +555,9 @@ public abstract class Action extends AbstractAction {
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public void setDisabledImageDescriptor(ImageDescriptor newImage) {
 		if (disabledImage != newImage) {
 			ImageDescriptor oldImage = disabledImage;
@@ -531,7 +566,9 @@ public abstract class Action extends AbstractAction {
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public void setEnabled(boolean enabled) {
 		if (enabled != this.enabled) {
 			Boolean oldVal = this.enabled ? Boolean.TRUE : Boolean.FALSE;
@@ -541,12 +578,16 @@ public abstract class Action extends AbstractAction {
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public void setHelpListener(HelpListener listener) {
 		helpListener = listener;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public void setHoverImageDescriptor(ImageDescriptor newImage) {
 		if (hoverImage != newImage) {
 			ImageDescriptor oldImage = hoverImage;
@@ -555,12 +596,16 @@ public abstract class Action extends AbstractAction {
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public void setId(String id) {
 		this.id = id;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on IAction.
+	 */
 	public void setImageDescriptor(ImageDescriptor newImage) {
 		if (image != newImage) {
 			ImageDescriptor oldImage = image;
@@ -574,11 +619,10 @@ public abstract class Action extends AbstractAction {
 	 * <p>
 	 * Note that if this method is called, it overrides the check status.
 	 * </p>
-	 *
+	 * 
 	 * @param creator
 	 *            the menu creator, or <code>null</code> if none
 	 */
-	@Override
 	public void setMenuCreator(IMenuCreator creator) {
 		// For backward compatibility, if the style is not
 		// set yet, then convert it to a drop down menu.
@@ -592,7 +636,23 @@ public abstract class Action extends AbstractAction {
 		}
 	}
 
-	@Override
+	/**
+	 * Sets the text for this action.
+	 * <p>
+	 * Fires a property change event for the <code>TEXT</code> property if the
+	 * text actually changes as a consequence.
+	 * </p>
+	 * <p>
+	 * The accelerator is identified by the last index of a tab character. If
+	 * there are no tab characters, then it is identified by the last index of a
+	 * '@' character. If neither, then there is no accelerator text. Note that
+	 * if you want to insert a '@' character into the text (but no accelerator,
+	 * you can simply insert a '@' or a tab at the end of the text.
+	 * </p>
+	 * 
+	 * @param text
+	 *            the text, or <code>null</code> if none
+	 */
 	public void setText(String text) {
 		String oldText = this.text;
 		int oldAccel = this.accelerator;
@@ -621,11 +681,10 @@ public abstract class Action extends AbstractAction {
 	 * Fires a property change event for the <code>TOOL_TIP_TEXT</code>
 	 * property if the tool tip text actually changes as a consequence.
 	 * </p>
-	 *
+	 * 
 	 * @param toolTipText
 	 *            the tool tip text, or <code>null</code> if none
 	 */
-	@Override
 	public void setToolTipText(String toolTipText) {
 		String oldToolTipText = this.toolTipText;
 		if (!(oldToolTipText == null ? toolTipText == null : oldToolTipText
