@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2008 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -17,7 +17,6 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.ResourceBundle;
 import java.util.Set;
 
@@ -65,7 +64,7 @@ import org.eclipse.swt.widgets.Event;
  * <p>
  * This class is not intended to be called or extended by any external clients.
  * </p>
- *
+ * 
  * @since 3.0
  */
 public final class ExternalActionManager {
@@ -77,7 +76,7 @@ public final class ExternalActionManager {
 	 * <p>
 	 * <b>Note:</b> this class is not intended to be subclassed by clients.
 	 * </p>
-	 *
+	 * 
 	 * @since 3.1
 	 */
 	public static class CommandCallback implements
@@ -93,7 +92,7 @@ public final class ExternalActionManager {
 		 * The callback capable of responding to whether a command is active.
 		 */
 		private final IActiveChecker activeChecker;
-
+		
 		/**
 		 * Check the applicability of firing an execution event for an action.
 		 */
@@ -123,7 +122,7 @@ public final class ExternalActionManager {
 		 * will be removed from this set and the listener removed. This value
 		 * may be empty, but never <code>null</code>.
 		 */
-		private final Set<String> loggedCommandIds = new HashSet<>();
+		private final Set loggedCommandIds = new HashSet();
 
 		/**
 		 * The list of listeners that have registered for property change
@@ -131,29 +130,38 @@ public final class ExternalActionManager {
 		 * to listeners (<code>IPropertyChangeListener</code> or
 		 * <code>ListenerList</code> of <code>IPropertyChangeListener</code>).
 		 */
-		private final Map<String, Object> registeredListeners = new HashMap<>();
+		private final Map registeredListeners = new HashMap();
 
 		/**
 		 * Constructs a new instance of <code>CommandCallback</code> with the
 		 * workbench it should be using. All commands will be considered active.
-		 *
+		 * 
 		 * @param bindingManager
 		 *            The binding manager which will provide the callback; must
 		 *            not be <code>null</code>.
 		 * @param commandManager
 		 *            The command manager which will provide the callback; must
 		 *            not be <code>null</code>.
-		 *
+		 * 
 		 * @since 3.1
 		 */
 		public CommandCallback(final BindingManager bindingManager,
 				final CommandManager commandManager) {
-			this(bindingManager, commandManager, commandId -> true, action -> true);
+			this(bindingManager, commandManager, new IActiveChecker() {
+				public boolean isActive(String commandId) {
+					return true;
+				}
+
+			}, new IExecuteApplicable() {
+				public boolean isApplicable(IAction action) {
+					return true;
+				}
+			});
 		}
 		/**
 		 * Constructs a new instance of <code>CommandCallback</code> with the
 		 * workbench it should be using.
-		 *
+		 * 
 		 * @param bindingManager
 		 *            The binding manager which will provide the callback; must
 		 *            not be <code>null</code>.
@@ -163,18 +171,23 @@ public final class ExternalActionManager {
 		 * @param activeChecker
 		 *            The callback mechanism for checking whether a command is
 		 *            active; must not be <code>null</code>.
-		 *
+		 * 
 		 * @since 3.1
 		 */
 		public CommandCallback(final BindingManager bindingManager,
 				final CommandManager commandManager,
 				final IActiveChecker activeChecker) {
-			this(bindingManager, commandManager, activeChecker, action -> true);
+			this(bindingManager, commandManager, activeChecker,
+					new IExecuteApplicable() {
+				public boolean isApplicable(IAction action) {
+					return true;
+				}
+			});
 		}
 		/**
 		 * Constructs a new instance of <code>CommandCallback</code> with the
 		 * workbench it should be using.
-		 *
+		 * 
 		 * @param bindingManager
 		 *            The binding manager which will provide the callback; must
 		 *            not be <code>null</code>.
@@ -187,7 +200,7 @@ public final class ExternalActionManager {
 		 * @param checker
 		 *            The callback to check if an IAction should fire execution
 		 *            events.
-		 *
+		 * 
 		 * @since 3.4
 		 */
 		public CommandCallback(final BindingManager bindingManager,
@@ -223,7 +236,6 @@ public final class ExternalActionManager {
 		 * @see org.eclipse.jface.action.ExternalActionManager.ICallback#addPropertyChangeListener(String,
 		 *      IPropertyChangeListener)
 		 */
-		@Override
 		public final void addPropertyChangeListener(final String commandId,
 				final IPropertyChangeListener listener) {
 			Object existing = registeredListeners.get(commandId);
@@ -243,14 +255,13 @@ public final class ExternalActionManager {
 			}
 		}
 
-		@Override
 		public final void bindingManagerChanged(final BindingManagerEvent event) {
 			if (event.isActiveBindingsChanged()) {
-				final Iterator<Entry<String, Object>> listenerItr = registeredListeners.entrySet()
+				final Iterator listenerItr = registeredListeners.entrySet()
 						.iterator();
 				while (listenerItr.hasNext()) {
-					final Entry<String, Object> entry = listenerItr.next();
-					final String commandId = entry.getKey();
+					final Map.Entry entry = (Map.Entry) listenerItr.next();
+					final String commandId = (String) entry.getKey();
 					final Command command = commandManager
 							.getCommand(commandId);
 					final ParameterizedCommand parameterizedCommand = new ParameterizedCommand(
@@ -277,7 +288,6 @@ public final class ExternalActionManager {
 		/**
 		 * @see org.eclipse.jface.action.ExternalActionManager.ICallback#getAccelerator(String)
 		 */
-		@Override
 		public final Integer getAccelerator(final String commandId) {
 			final TriggerSequence triggerSequence = bindingManager
 					.getBestActiveBindingFor(commandId);
@@ -289,7 +299,7 @@ public final class ExternalActionManager {
 						final KeyStroke keyStroke = (KeyStroke) trigger;
 						final int accelerator = SWTKeySupport
 								.convertKeyStrokeToAccelerator(keyStroke);
-						return Integer.valueOf(accelerator);
+						return new Integer(accelerator);
 					}
 				}
 			}
@@ -300,7 +310,6 @@ public final class ExternalActionManager {
 		/**
 		 * @see org.eclipse.jface.action.ExternalActionManager.ICallback#getAcceleratorText(String)
 		 */
-		@Override
 		public final String getAcceleratorText(final String commandId) {
 			final TriggerSequence triggerSequence = bindingManager
 					.getBestActiveBindingFor(commandId);
@@ -313,7 +322,7 @@ public final class ExternalActionManager {
 
 		/**
 		 * Returns the active bindings for a particular command identifier.
-		 *
+		 * 
 		 * @param commandId
 		 *            The identifier of the command whose bindings are
 		 *            requested. This argument may be <code>null</code>. It
@@ -323,7 +332,6 @@ public final class ExternalActionManager {
 		 *         not to be <code>null</code>, but it may be empty.
 		 * @since 3.2
 		 */
-		@Override
 		public final TriggerSequence[] getActiveBindingsFor(
 				final String commandId) {
 			return bindingManager.getActiveBindingsFor(commandId);
@@ -332,7 +340,6 @@ public final class ExternalActionManager {
 		/**
 		 * @see org.eclipse.jface.action.ExternalActionManager.ICallback#isAcceleratorInUse(int)
 		 */
-		@Override
 		public final boolean isAcceleratorInUse(final int accelerator) {
 			final KeySequence keySequence = KeySequence
 					.getInstance(SWTKeySupport
@@ -343,11 +350,10 @@ public final class ExternalActionManager {
 
 		/**
 		 * {@inheritDoc}
-		 *
+		 * 
 		 * Calling this method with an undefined command id will generate a log
 		 * message.
 		 */
-		@Override
 		public final boolean isActive(final String commandId) {
 			if (commandId != null) {
 				final Command command = commandManager.getCommand(commandId);
@@ -358,7 +364,7 @@ public final class ExternalActionManager {
 					final String message = MessageFormat.format(Util
 							.translateString(RESOURCE_BUNDLE,
 									"undefinedCommand.WarningMessage", null), //$NON-NLS-1$
-							command.getId());
+							new String[] { command.getId() });
 					IStatus status = new Status(IStatus.ERROR,
 							"org.eclipse.jface", //$NON-NLS-1$
 							0, message, new Exception());
@@ -367,7 +373,11 @@ public final class ExternalActionManager {
 					// And remember this item so we don't log it again.
 					loggedCommandIds.add(commandId);
 					command.addCommandListener(new ICommandListener() {
-						@Override
+						/*
+						 * (non-Javadoc)
+						 * 
+						 * @see org.eclipse.ui.commands.ICommandListener#commandChanged(org.eclipse.ui.commands.CommandEvent)
+						 */
 						public final void commandChanged(
 								final CommandEvent commandEvent) {
 							if (command.isDefined()) {
@@ -390,7 +400,6 @@ public final class ExternalActionManager {
 		 * @see org.eclipse.jface.action.ExternalActionManager.ICallback#removePropertyChangeListener(String,
 		 *      IPropertyChangeListener)
 		 */
-		@Override
 		public final void removePropertyChangeListener(final String commandId,
 				final IPropertyChangeListener listener) {
 			Object existing= registeredListeners.get(commandId);
@@ -412,10 +421,9 @@ public final class ExternalActionManager {
 		/**
 		 * @since 3.4
 		 */
-		@Override
 		public void preExecute(IAction action, Event event) {
 			String actionDefinitionId = action.getActionDefinitionId();
-			if (actionDefinitionId==null
+			if (actionDefinitionId==null 
 					|| !applicabilityChecker.isApplicable(action)) {
 				return;
 			}
@@ -429,10 +437,9 @@ public final class ExternalActionManager {
 		/**
 		 * @since 3.4
 		 */
-		@Override
 		public void postExecuteSuccess(IAction action, Object returnValue) {
 			String actionDefinitionId = action.getActionDefinitionId();
-			if (actionDefinitionId==null
+			if (actionDefinitionId==null 
 					|| !applicabilityChecker.isApplicable(action)) {
 				return;
 			}
@@ -442,11 +449,10 @@ public final class ExternalActionManager {
 		/**
 		 * @since 3.4
 		 */
-		@Override
 		public void postExecuteFailure(IAction action,
 				ExecutionException exception) {
 			String actionDefinitionId = action.getActionDefinitionId();
-			if (actionDefinitionId==null
+			if (actionDefinitionId==null 
 					|| !applicabilityChecker.isApplicable(action)) {
 				return;
 			}
@@ -456,10 +462,9 @@ public final class ExternalActionManager {
 		/**
 		 * @since 3.4
 		 */
-		@Override
 		public void notDefined(IAction action, NotDefinedException exception) {
 			String actionDefinitionId = action.getActionDefinitionId();
-			if (actionDefinitionId==null
+			if (actionDefinitionId==null 
 					|| !applicabilityChecker.isApplicable(action)) {
 				return;
 			}
@@ -469,10 +474,9 @@ public final class ExternalActionManager {
 		/**
 		 * @since 3.4
 		 */
-		@Override
 		public void notEnabled(IAction action, NotEnabledException exception) {
 			String actionDefinitionId = action.getActionDefinitionId();
-			if (actionDefinitionId==null
+			if (actionDefinitionId==null 
 					|| !applicabilityChecker.isApplicable(action)) {
 				return;
 			}
@@ -483,7 +487,7 @@ public final class ExternalActionManager {
 	/**
 	 * Defines a callback mechanism for developer who wish to further control
 	 * the visibility of legacy action-based contribution items.
-	 *
+	 * 
 	 * @since 3.1
 	 */
 	public static interface IActiveChecker {
@@ -491,7 +495,7 @@ public final class ExternalActionManager {
 		 * Checks whether the command with the given identifier should be
 		 * considered active. This can be used in systems using some kind of
 		 * user interface filtering (e.g., activities in the Eclipse workbench).
-		 *
+		 * 
 		 * @param commandId
 		 *            The identifier for the command; must not be
 		 *            <code>null</code>
@@ -511,7 +515,7 @@ public final class ExternalActionManager {
 	 * <p>
 	 * Clients may implement this interface, but must not extend.
 	 * </p>
-	 *
+	 * 
 	 * @since 3.2
 	 */
 	public static interface IBindingManagerCallback extends ICallback {
@@ -520,7 +524,7 @@ public final class ExternalActionManager {
 		 * <p>
 		 * Returns the active bindings for a particular command identifier.
 		 * </p>
-		 *
+		 * 
 		 * @param commandId
 		 *            The identifier of the command whose bindings are
 		 *            requested. This argument may be <code>null</code>. It
@@ -531,25 +535,25 @@ public final class ExternalActionManager {
 		 */
 		public TriggerSequence[] getActiveBindingsFor(String commandId);
 	}
-
+	
 	/**
 	 * An overridable mechanism to filter certain IActions from the execution
 	 * bridge.
-	 *
+	 * 
 	 * @since 3.4
 	 */
 	public static interface IExecuteApplicable {
 		/**
 		 * Allow the callback to filter out actions that should not fire
 		 * execution events.
-		 *
+		 * 
 		 * @param action
 		 *            The action with an actionDefinitionId
 		 * @return true if this action should be considered.
 		 */
 		public boolean isApplicable(IAction action);
 	}
-
+	
 	/**
 	 * <p>
 	 * A callback for executing execution events. Allows
@@ -558,16 +562,16 @@ public final class ExternalActionManager {
 	 * <p>
 	 * Clients must not implement this interface and must not extend.
 	 * </p>
-	 *
+	 * 
 	 * @since 3.4
-	 *
+	 * 
 	 */
 	public static interface IExecuteCallback {
-
+		
 		/**
 		 * Fires a <code>NotEnabledException</code> because the action was not
 		 * enabled.
-		 *
+		 * 
 		 * @param action
 		 * 			The action contribution that caused the exception,
 		 * 			never <code>null</code>.
@@ -579,7 +583,7 @@ public final class ExternalActionManager {
 		/**
 		 * Fires a <code>NotDefinedException</code> because the action was not
 		 * defined.
-		 *
+		 * 
 		 * @param action
 		 * 			The action contribution that caused the exception,
 		 * 			never <code>null</code>.
@@ -587,37 +591,37 @@ public final class ExternalActionManager {
 		 * 			The <code>NotDefinedException</code>, never <code>null</code>.
 		 */
 		public void notDefined(IAction action, NotDefinedException exception);
-
+		
 		/**
 		 * Fires an execution event before an action is run.
-		 *
+		 * 
 		 * @param action
 		 *            The action contribution that requires an
 		 *            execution event to be fired. Cannot be <code>null</code>.
 		 * @param e
 		 *            The SWT Event, may be <code>null</code>.
-		 *
+		 * 
 		 */
 		public void preExecute(IAction action,
 				Event e);
-
+		
 		/**
 		 * Fires an execution event when the action returned a success.
-		 *
+		 * 
 		 * @param action
 		 *            The action contribution that requires an
 		 *            execution event to be fired. Cannot be <code>null</code>.
 		 * @param returnValue
 		 *            The command's result, may be <code>null</code>.
-		 *
+		 * 
 		 */
 		public void postExecuteSuccess(IAction action,
 				Object returnValue);
-
+		
 		/**
 		 * Creates an <code>ExecutionException</code> when the action returned
 		 * a failure.
-		 *
+		 * 
 		 * @param action
 		 * 			The action contribution that caused the exception,
 		 * 			never <code>null</code>.
@@ -631,7 +635,7 @@ public final class ExternalActionManager {
 	/**
 	 * A callback mechanism for some external tool to communicate extra
 	 * information to actions and action contribution items.
-	 *
+	 * 
 	 * @since 3.0
 	 */
 	public static interface ICallback {
@@ -647,7 +651,7 @@ public final class ExternalActionManager {
 		 * Has no effect if an identical listener has already been added for
 		 * the <code>identifier</code>.
 		 * </p>
-		 *
+		 * 
 		 * @param identifier
 		 *            The identifier of the item to which the listener should be
 		 *            attached; must not be <code>null</code>.
@@ -661,7 +665,7 @@ public final class ExternalActionManager {
 		 * An accessor for the accelerator associated with the item indicated by
 		 * the identifier. This identifier is specific to mechanism being used.
 		 * In the case of the Eclipse workbench, this is the command identifier.
-		 *
+		 * 
 		 * @param identifier
 		 *            The identifier of the item from which the accelerator
 		 *            should be obtained ; must not be <code>null</code>.
@@ -675,7 +679,7 @@ public final class ExternalActionManager {
 		 * indicated by the identifier. This identifier is specific to mechanism
 		 * being used. In the case of the Eclipse workbench, this is the command
 		 * identifier.
-		 *
+		 * 
 		 * @param identifier
 		 *            The identifier of the item from which the accelerator text
 		 *            should be obtained ; must not be <code>null</code>.
@@ -689,7 +693,7 @@ public final class ExternalActionManager {
 		 * other mechanism (outside of the menus controlled by JFace). This is
 		 * used to keep JFace from trying to grab accelerators away from someone
 		 * else.
-		 *
+		 * 
 		 * @param accelerator
 		 *            The accelerator to check -- in SWT's internal accelerator
 		 *            format.
@@ -702,7 +706,7 @@ public final class ExternalActionManager {
 		 * Checks whether the item matching this identifier is active. This is
 		 * used to decide whether a contribution item with this identifier
 		 * should be made visible. An inactive item is not visible.
-		 *
+		 * 
 		 * @param identifier
 		 *            The identifier of the item from which the active state
 		 *            should be retrieved; must not be <code>null</code>.
@@ -716,7 +720,7 @@ public final class ExternalActionManager {
 		 * <code>identifier</code>. This identifier is specific to mechanism
 		 * being used. In the case of the Eclipse workbench, this is the command
 		 * identifier.
-		 *
+		 * 
 		 * @param identifier
 		 *            The identifier of the item to from the listener should be
 		 *            removed; must not be <code>null</code>.
@@ -736,7 +740,7 @@ public final class ExternalActionManager {
 
 	/**
 	 * Retrieves the current singleton instance of this class.
-	 *
+	 * 
 	 * @return The singleton instance; this value is never <code>null</code>.
 	 */
 	public static ExternalActionManager getInstance() {
@@ -761,7 +765,7 @@ public final class ExternalActionManager {
 
 	/**
 	 * An accessor for the current call back.
-	 *
+	 * 
 	 * @return The current callback mechanism being used. This is the callback
 	 *         that should be queried for extra information about actions and
 	 *         action contribution items. This value may be <code>null</code>
@@ -773,7 +777,7 @@ public final class ExternalActionManager {
 
 	/**
 	 * A mutator for the current call back
-	 *
+	 * 
 	 * @param callbackToUse
 	 *            The new callback mechanism to use; this value may be
 	 *            <code>null</code> if the default is acceptable (i.e., no
