@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2015 IBM Corporation and others.
+ * Copyright (c) 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -21,14 +21,14 @@ import org.eclipse.swt.widgets.ToolBar;
 
 /**
  * Extends <code>ToolBarManager</code> to implement <code>IToolBarManager2</code>.
- *
+ * 
  * <p>
  * <strong>EXPERIMENTAL</strong>. This class or interface has been added as
  * part of a work in progress. There is a guarantee neither that this API will
  * work nor that it will remain the same. Please do not use this API without
  * consulting with the Platform/UI team.
  * </p>
- *
+ * 
  * @since 3.2
  */
 public class ToolBarManager2 extends ToolBarManager implements IToolBarManager2 {
@@ -38,7 +38,7 @@ public class ToolBarManager2 extends ToolBarManager implements IToolBarManager2 
 	 * collection is <code>null</code> if there are no listeners.
 	 */
 	private transient ListenerList listenerList = null;
-
+	
 	/**
 	 * Creates a new tool bar manager with the default SWT button style. Use the
 	 * <code>createControl</code> method to create the tool bar control.
@@ -50,7 +50,7 @@ public class ToolBarManager2 extends ToolBarManager implements IToolBarManager2 
 	/**
 	 * Creates a tool bar manager with the given SWT button style. Use the
 	 * <code>createControl</code> method to create the tool bar control.
-	 *
+	 * 
 	 * @param style
 	 *            the tool bar item style
 	 * @see org.eclipse.swt.widgets.ToolBar for valid style bits
@@ -63,25 +63,31 @@ public class ToolBarManager2 extends ToolBarManager implements IToolBarManager2 
 	 * Creates a tool bar manager for an existing tool bar control. This manager
 	 * becomes responsible for the control, and will dispose of it when the
 	 * manager is disposed.
-	 *
+	 * 
 	 * @param toolbar
 	 *            the tool bar control
 	 */
 	public ToolBarManager2(ToolBar toolbar) {
 		super(toolbar);
 	}
-
-	@Override
+	
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.action.IToolBarManager2#createControl2(org.eclipse.swt.widgets.Composite)
+	 */
 	public Control createControl2(Composite parent) {
 		return createControl(parent);
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.action.IToolBarManager2#getControl2()
+	 */
 	public Control getControl2() {
 		return getControl();
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.action.IToolBarManager2#getItemCount()
+	 */
 	public int getItemCount() {
 		ToolBar toolBar = getControl();
 		if (toolBar == null || toolBar.isDisposed()) {
@@ -90,7 +96,9 @@ public class ToolBarManager2 extends ToolBarManager implements IToolBarManager2 
 		return toolBar.getItemCount();
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.action.IToolBarManager2#addPropertyChangeListener(org.eclipse.jface.util.IPropertyChangeListener)
+	 */
 	public void addPropertyChangeListener(IPropertyChangeListener listener) {
 		if (listenerList == null) {
 			listenerList = new ListenerList(ListenerList.IDENTITY);
@@ -99,7 +107,9 @@ public class ToolBarManager2 extends ToolBarManager implements IToolBarManager2 
 		listenerList.add(listener);
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.action.IToolBarManager2#removePropertyChangeListener(org.eclipse.jface.util.IPropertyChangeListener)
+	 */
 	public void removePropertyChangeListener(IPropertyChangeListener listener) {
 		if (listenerList != null) {
 			listenerList.remove(listener);
@@ -109,12 +119,12 @@ public class ToolBarManager2 extends ToolBarManager implements IToolBarManager2 
 			}
 		}
 	}
-
+	
 	/**
 	 * @return the listeners attached to this event manager.
 	 * The listeners currently attached; may be empty, but never
 	 * null.
-	 *
+	 * 
 	 */
 	protected final Object[] getListeners() {
 		final ListenerList list = listenerList;
@@ -150,9 +160,11 @@ public class ToolBarManager2 extends ToolBarManager implements IToolBarManager2 
 		}
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.action.ToolBarManager#relayout(org.eclipse.swt.widgets.ToolBar, int, int)
+	 */
 	protected void relayout(ToolBar layoutBar, int oldCount, int newCount) {
 		super.relayout(layoutBar, oldCount, newCount);
-		firePropertyChange(PROP_LAYOUT, Integer.valueOf(oldCount), Integer.valueOf(newCount));
+		firePropertyChange(PROP_LAYOUT, new Integer(oldCount), new Integer(newCount));
 	}
 }
