@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2015 IBM Corporation and others.
+ * Copyright (c) 2003, 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,11 +7,12 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Wedia - Joel DRIGO (joel.drigo@wedia-group.com): Bug 470866
  *******************************************************************************/
 package org.eclipse.jface.preference;
 
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
@@ -22,7 +23,7 @@ import org.eclipse.swt.widgets.Scale;
 /**
  * A field editor for an integer type preference. This class may be used as is,
  * or subclassed as required.
- *
+ * 
  * @since 3.0
  */
 public class ScaleFieldEditor extends FieldEditor {
@@ -59,7 +60,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Creates a scale field editor.
-     *
+     * 
      * @param name
      *            the name of the preference this field editor works on
      * @param labelText
@@ -74,7 +75,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Creates a scale field editor with particular scale values.
-     *
+     * 
      * @param name
      *            the name of the preference this field editor works on
      * @param labelText
@@ -96,13 +97,22 @@ public class ScaleFieldEditor extends FieldEditor {
         setValues(min, max, increment, pageIncrement);
     }
 
-    @Override
-	protected void adjustForNumColumns(int numColumns) {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#adjustForNumColumns(int)
+     */
+    protected void adjustForNumColumns(int numColumns) {
         ((GridData) scale.getLayoutData()).horizontalSpan = numColumns - 1;
     }
 
-    @Override
-	protected void doFillIntoGrid(Composite parent, int numColumns) {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#doFillIntoGrid(org.eclipse.swt.widgets.Composite,
+     *      int)
+     */
+    protected void doFillIntoGrid(Composite parent, int numColumns) {
         Control control = getLabelControl(parent);
         GridData gd = new GridData();
         control.setLayoutData(gd);
@@ -116,8 +126,12 @@ public class ScaleFieldEditor extends FieldEditor {
         updateScale();
     }
 
-    @Override
-	protected void doLoad() {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#doLoad()
+     */
+    protected void doLoad() {
         if (scale != null) {
             int value = getPreferenceStore().getInt(getPreferenceName());
             scale.setSelection(value);
@@ -125,8 +139,12 @@ public class ScaleFieldEditor extends FieldEditor {
         }
     }
 
-    @Override
-	protected void doLoadDefault() {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#doLoadDefault()
+     */
+    protected void doLoadDefault() {
         if (scale != null) {
             int value = getPreferenceStore().getDefaultInt(getPreferenceName());
             scale.setSelection(value);
@@ -134,15 +152,19 @@ public class ScaleFieldEditor extends FieldEditor {
         valueChanged();
     }
 
-    @Override
-	protected void doStore() {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#doStore()
+     */
+    protected void doStore() {
         getPreferenceStore()
                 .setValue(getPreferenceName(), scale.getSelection());
     }
 
     /**
      * Returns the value that will be used for Scale.setIncrement(int).
-     *
+     * 
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setIncrement(int)
      */
@@ -152,7 +174,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Returns the value that will be used for Scale.setMaximum(int).
-     *
+     * 
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setMaximum(int)
      */
@@ -162,7 +184,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Returns the value that will be used for Scale.setMinimum(int).
-     *
+     * 
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setMinimum(int)
      */
@@ -170,14 +192,18 @@ public class ScaleFieldEditor extends FieldEditor {
         return minValue;
     }
 
-    @Override
-	public int getNumberOfControls() {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#getNumberOfControls()
+     */
+    public int getNumberOfControls() {
         return 2;
     }
 
     /**
      * Returns the value that will be used for Scale.setPageIncrement(int).
-     *
+     * 
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setPageIncrement(int)
      */
@@ -187,7 +213,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Returns this field editor's scale control.
-     *
+     * 
      * @return the scale control, or <code>null</code> if no scale field is
      *         created yet
      */
@@ -198,7 +224,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Returns this field editor's scale control. The control is created if it
      * does not yet exist.
-     *
+     * 
      * @param parent
      *            the parent
      * @return the scale control
@@ -208,12 +234,15 @@ public class ScaleFieldEditor extends FieldEditor {
             scale = new Scale(parent, SWT.HORIZONTAL);
             scale.setFont(parent.getFont());
             scale.addSelectionListener(new SelectionAdapter() {
-                @Override
-				public void widgetSelected(SelectionEvent event) {
+                public void widgetSelected(SelectionEvent event) {
                     valueChanged();
                 }
             });
-            scale.addDisposeListener(event -> scale = null);
+            scale.addDisposeListener(new DisposeListener() {
+                public void widgetDisposed(DisposeEvent event) {
+                    scale = null;
+                }
+            });
         } else {
             checkParent(scale, parent);
         }
@@ -227,14 +256,18 @@ public class ScaleFieldEditor extends FieldEditor {
      * <li>Maximim = 10
      * <li>Increment = 1
      * <li>Page Increment = 1
-     * </ul>
+     * </ul> 
      */
     private void setDefaultValues() {
         setValues(0, 10, 1, 1);
     }
 
-    @Override
-	public void setFocus() {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.preference.FieldEditor#setFocus()
+     */
+    public void setFocus() {
         if (scale != null && !scale.isDisposed()) {
             scale.setFocus();
         }
@@ -243,7 +276,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setIncrement(int) and update the
      * scale.
-     *
+     * 
      * @param increment
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setIncrement(int)
@@ -256,7 +289,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setMaximum(int) and update the
      * scale.
-     *
+     * 
      * @param max
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setMaximum(int)
@@ -269,7 +302,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setMinumum(int) and update the
      * scale.
-     *
+     * 
      * @param min
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setMinimum(int)
@@ -282,7 +315,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setPageIncrement(int) and update the
      * scale.
-     *
+     * 
      * @param pageIncrement
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setPageIncrement(int)
@@ -294,7 +327,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Set all Scale values.
-     *
+     * 
      * @param min
      *            the value used for Scale.setMinimum(int).
      * @param max
@@ -339,18 +372,9 @@ public class ScaleFieldEditor extends FieldEditor {
         int newValue = scale.getSelection();
         if (newValue != oldValue) {
             fireStateChanged(IS_VALID, false, true);
-			fireValueChanged(VALUE, Integer.valueOf(oldValue), Integer.valueOf(newValue));
+            fireValueChanged(VALUE, new Integer(oldValue),
+                    new Integer(newValue));
             oldValue = newValue;
         }
     }
-
-	/**
-	 * Bug 470866 fix
-	 */
-	@Override
-	public void setEnabled(boolean enabled, Composite parent) {
-		super.setEnabled(enabled, parent);
-		getScaleControl().setEnabled(enabled);
-	}
-
 }
