@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2008 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -24,6 +24,8 @@ import org.eclipse.swt.events.KeyAdapter;
 import org.eclipse.swt.events.KeyEvent;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
+import org.eclipse.swt.events.TraverseEvent;
+import org.eclipse.swt.events.TraverseListener;
 import org.eclipse.swt.graphics.GC;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
@@ -127,7 +129,9 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 		populateComboBoxItems();
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on CellEditor.
+	 */
 	protected Control createControl(Composite parent) {
 
 		comboBox = new CCombo(parent, getStyle());
@@ -137,33 +141,31 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 
 		comboBox.addKeyListener(new KeyAdapter() {
 			// hook key pressed - see PR 14201
-			@Override
 			public void keyPressed(KeyEvent e) {
 				keyReleaseOccured(e);
 			}
 		});
 
 		comboBox.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetDefaultSelected(SelectionEvent event) {
 				applyEditorValueAndDeactivate();
 			}
 
-			@Override
 			public void widgetSelected(SelectionEvent event) {
 				selection = comboBox.getSelectionIndex();
 			}
 		});
 
-		comboBox.addTraverseListener(e -> {
-			if (e.detail == SWT.TRAVERSE_ESCAPE
-					|| e.detail == SWT.TRAVERSE_RETURN) {
-				e.doit = false;
+		comboBox.addTraverseListener(new TraverseListener() {
+			public void keyTraversed(TraverseEvent e) {
+				if (e.detail == SWT.TRAVERSE_ESCAPE
+						|| e.detail == SWT.TRAVERSE_RETURN) {
+					e.doit = false;
+				}
 			}
 		});
 
 		comboBox.addFocusListener(new FocusAdapter() {
-			@Override
 			public void focusLost(FocusEvent e) {
 				ComboBoxCellEditor.this.focusLost();
 			}
@@ -179,12 +181,13 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 	 * @return the zero-based index of the current selection wrapped as an
 	 *         <code>Integer</code>
 	 */
-	@Override
 	protected Object doGetValue() {
-		return Integer.valueOf(selection);
+		return new Integer(selection);
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared on CellEditor.
+	 */
 	protected void doSetFocus() {
 		comboBox.setFocus();
 	}
@@ -197,7 +200,6 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 	 * to make sure the arrow button and some text is visible. The list of
 	 * CCombo will be wide enough to show its longest item.
 	 */
-	@Override
 	public LayoutData getLayoutData() {
 		LayoutData layoutData = super.getLayoutData();
 		if ((comboBox == null) || comboBox.isDisposed()) {
@@ -221,7 +223,6 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 	 *            the zero-based index of the selection wrapped as an
 	 *            <code>Integer</code>
 	 */
-	@Override
 	protected void doSetValue(Object value) {
 		Assert.isTrue(comboBox != null && (value instanceof Integer));
 		selection = ((Integer) value).intValue();
@@ -273,14 +274,22 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 		deactivate();
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.jface.viewers.CellEditor#focusLost()
+	 */
 	protected void focusLost() {
 		if (isActivated()) {
 			applyEditorValueAndDeactivate();
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.jface.viewers.CellEditor#keyReleaseOccured(org.eclipse.swt.events.KeyEvent)
+	 */
 	protected void keyReleaseOccured(KeyEvent keyEvent) {
 		if (keyEvent.character == '\u001b') { // Escape character
 			fireCancelEditor();
