@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2015 IBM Corporation and others.
+ * Copyright (c) 2003, 2011 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,9 +8,6 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Helmut J. Haigermoser -  Bug 359838 - The "Workspace Unavailable" error
- *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 422954
- *     Christian Georgi (SAP) - Bug 423882 - Warn user if workspace is newer than IDE
- *     Andrey Loskutov <loskutov@gmx.de> - Bug 427393, 455162
  *******************************************************************************/
 package org.eclipse.ui.internal.ide.application;
 
@@ -29,34 +26,28 @@ import org.eclipse.core.runtime.IExecutableExtension;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.core.runtime.Status;
-import org.eclipse.core.runtime.preferences.ConfigurationScope;
 import org.eclipse.equinox.app.IApplication;
 import org.eclipse.equinox.app.IApplicationContext;
-import org.eclipse.jface.dialogs.IDialogConstants;
+import org.eclipse.jface.dialogs.Dialog;
 import org.eclipse.jface.dialogs.MessageDialog;
-import org.eclipse.jface.dialogs.MessageDialogWithToggle;
-import org.eclipse.jface.preference.IPersistentPreferenceStore;
-import org.eclipse.jface.window.Window;
 import org.eclipse.osgi.service.datalocation.Location;
 import org.eclipse.osgi.util.NLS;
+import org.eclipse.swt.SWT;
 import org.eclipse.swt.widgets.Display;
+import org.eclipse.swt.widgets.MessageBox;
 import org.eclipse.swt.widgets.Shell;
 import org.eclipse.ui.IWorkbench;
 import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.internal.WorkbenchPlugin;
 import org.eclipse.ui.internal.ide.ChooseWorkspaceData;
 import org.eclipse.ui.internal.ide.ChooseWorkspaceDialog;
-import org.eclipse.ui.internal.ide.IDEInternalPreferences;
 import org.eclipse.ui.internal.ide.IDEWorkbenchMessages;
 import org.eclipse.ui.internal.ide.IDEWorkbenchPlugin;
 import org.eclipse.ui.internal.ide.StatusUtil;
-import org.eclipse.ui.preferences.ScopedPreferenceStore;
-import org.osgi.framework.Bundle;
-import org.osgi.framework.Version;
 
 /**
  * The "main program" for the Eclipse IDE.
- *
+ * 
  * @since 3.0
  */
 public class IDEApplication implements IApplication, IExecutableExtension {
@@ -68,17 +59,9 @@ public class IDEApplication implements IApplication, IExecutableExtension {
 
     private static final String VERSION_FILENAME = "version.ini"; //$NON-NLS-1$
 
-    // Use the branding plug-in of the platform feature since this is most likely
-    // to change on an update of the IDE.
-    private static final String WORKSPACE_CHECK_REFERENCE_BUNDLE_NAME = "org.eclipse.platform"; //$NON-NLS-1$
-    private static final Version WORKSPACE_CHECK_REFERENCE_BUNDLE_VERSION;
-    static {
-        Bundle bundle = Platform.getBundle(WORKSPACE_CHECK_REFERENCE_BUNDLE_NAME);
-        WORKSPACE_CHECK_REFERENCE_BUNDLE_VERSION = bundle != null ? bundle.getVersion() : null/*not installed*/;
-    }
+    private static final String WORKSPACE_VERSION_KEY = "org.eclipse.core.runtime"; //$NON-NLS-1$
 
-    private static final String WORKSPACE_CHECK_REFERENCE_BUNDLE_NAME_LEGACY = "org.eclipse.core.runtime"; //$NON-NLS-1$
-    private static final String WORKSPACE_CHECK_LEGACY_VERSION_INCREMENTED = "2"; //$NON-NLS-1$   legacy version=1
+    private static final String WORKSPACE_VERSION_VALUE = "1"; //$NON-NLS-1$
 
     private static final String PROP_EXIT_CODE = "eclipse.exitcode"; //$NON-NLS-1$
 
@@ -86,14 +69,14 @@ public class IDEApplication implements IApplication, IExecutableExtension {
      * A special return code that will be recognized by the launcher and used to
      * restart the workbench.
      */
-	private static final Integer EXIT_RELAUNCH = Integer.valueOf(24);
+    private static final Integer EXIT_RELAUNCH = new Integer(24);
 
     /**
      * A special return code that will be recognized by the PDE launcher and used to
      * show an error dialog if the workspace is locked.
      */
-	private static final Integer EXIT_WORKSPACE_LOCKED = Integer.valueOf(15);
-
+    private static final Integer EXIT_WORKSPACE_LOCKED = new Integer(15);
+    
     /**
      * The ID of the application plug-in
      */
@@ -106,8 +89,10 @@ public class IDEApplication implements IApplication, IExecutableExtension {
         // There is nothing to do for IDEApplication
     }
 
-    @Override
-	public Object start(IApplicationContext appContext) throws Exception {
+    /* (non-Javadoc)
+     * @see org.eclipse.equinox.app.IApplication#start(org.eclipse.equinox.app.IApplicationContext context)
+     */
+    public Object start(IApplicationContext appContext) throws Exception {
         Display display = createDisplay();
         // processor must be created before we start event loop
         DelayedEventsProcessor processor = new DelayedEventsProcessor(display);
@@ -117,17 +102,18 @@ public class IDEApplication implements IApplication, IExecutableExtension {
         	// look and see if there's a splash shell we can parent off of
         	Shell shell = WorkbenchPlugin.getSplashShell(display);
         	if (shell != null) {
-        		// should should set the icon and message for this shell to be the
+        		// should should set the icon and message for this shell to be the 
         		// same as the chooser dialog - this will be the guy that lives in
-        		// the task bar and without these calls you'd have the default icon
+        		// the task bar and without these calls you'd have the default icon 
         		// with no message.
         		shell.setText(ChooseWorkspaceDialog.getWindowTitle());
-        		shell.setImages(Window.getDefaultImages());
+        		shell.setImages(Dialog.getDefaultImages());
         	}
-
+           
             Object instanceLocationCheck = checkInstanceLocation(shell, appContext.getArguments());
 			if (instanceLocationCheck != null) {
             	WorkbenchPlugin.unsetSplashShell(display);
+                Platform.endSplash();
                 return instanceLocationCheck;
             }
 
@@ -161,15 +147,17 @@ public class IDEApplication implements IApplication, IExecutableExtension {
 
     /**
      * Creates the display used by the application.
-     *
+     * 
      * @return the display used by the application
      */
     protected Display createDisplay() {
         return PlatformUI.createDisplay();
     }
 
-    @Override
-	public void setInitializationData(IConfigurationElement config,
+    /* (non-Javadoc)
+     * @see org.eclipse.core.runtime.IExecutableExtension#setInitializationData(org.eclipse.core.runtime.IConfigurationElement, java.lang.String, java.lang.Object)
+     */
+    public void setInitializationData(IConfigurationElement config,
             String propertyName, Object data) {
         // There is nothing to do for IDEApplication
     }
@@ -177,13 +165,12 @@ public class IDEApplication implements IApplication, IExecutableExtension {
     /**
      * Return <code>null</code> if a valid workspace path has been set and an exit code otherwise.
      * Prompt for and set the path if possible and required.
-     *
+     * 
      * @param applicationArguments the command line arguments
      * @return <code>null</code> if a valid instance location has been set and an exit code
      *         otherwise
      */
-    @SuppressWarnings("rawtypes")
-	private Object checkInstanceLocation(Shell shell, Map applicationArguments) {
+    private Object checkInstanceLocation(Shell shell, Map applicationArguments) {
         // -data @none was specified but an ide requires workspace
         Location instanceLoc = Platform.getInstanceLocation();
         if (instanceLoc == null) {
@@ -210,8 +197,8 @@ public class IDEApplication implements IApplication, IExecutableExtension {
                     writeWorkspaceVersion();
                     return null;
                 }
-
-                // we failed to create the directory.
+                
+                // we failed to create the directory.  
                 // Two possibilities:
                 // 1. directory is already in use
                 // 2. directory could not be created
@@ -226,19 +213,19 @@ public class IDEApplication implements IApplication, IExecutableExtension {
 	                        NLS.bind(IDEWorkbenchMessages.IDEApplication_workspaceCannotLockMessage, workspaceDirectory.getAbsolutePath()));
                 } else {
                 	MessageDialog.openError(
-                			shell,
+                			shell, 
                 			IDEWorkbenchMessages.IDEApplication_workspaceCannotBeSetTitle,
                 			IDEWorkbenchMessages.IDEApplication_workspaceCannotBeSetMessage);
                 }
             } catch (IOException e) {
                 IDEWorkbenchPlugin.log("Could not obtain lock for workspace location", //$NON-NLS-1$
-                        e);
+                        e);            	
                 MessageDialog
                 .openError(
                         shell,
                         IDEWorkbenchMessages.InternalError,
-                        e.getMessage());
-            }
+                        e.getMessage());                
+            }            
             return EXIT_OK;
         }
 
@@ -247,16 +234,6 @@ public class IDEApplication implements IApplication, IExecutableExtension {
                 .getDefault());
 
         boolean force = false;
-
-		boolean parentShellVisible = false;
-		if (isValidShell(shell)) {
-			parentShellVisible = shell.getVisible();
-			// bug 455162, bug 427393: hide the splash if the workspace
-			// prompt dialog should be opened
-			if (parentShellVisible && launchData.getShowDialog()) {
-				shell.setVisible(false);
-			}
-		}
         while (true) {
             URL workspaceUrl = promptForWorkspace(shell, launchData, force);
             if (workspaceUrl == null) {
@@ -270,16 +247,9 @@ public class IDEApplication implements IApplication, IExecutableExtension {
             try {
                 // the operation will fail if the url is not a valid
                 // instance data area, so other checking is unneeded
-                if (instanceLoc.set(workspaceUrl, true)) {
+                if (instanceLoc.setURL(workspaceUrl, true)) {
                     launchData.writePersistedData();
                     writeWorkspaceVersion();
-
-					// bug 455162, bug 427393: unhide the splash after the
-					// workspace was selected to show the progress bar
-					if (parentShellVisible && isValidShell(shell)) {
-						shell.setVisible(true);
-						shell.forceActive();
-					}
                     return null;
                 }
             } catch (IllegalStateException e) {
@@ -289,35 +259,28 @@ public class IDEApplication implements IApplication, IExecutableExtension {
                                 IDEWorkbenchMessages.IDEApplication_workspaceCannotBeSetTitle,
                                 IDEWorkbenchMessages.IDEApplication_workspaceCannotBeSetMessage);
                 return EXIT_OK;
-            } catch (IOException e) {
-            	  MessageDialog
-                  .openError(
-                          shell,
-                          IDEWorkbenchMessages.IDEApplication_workspaceCannotBeSetTitle,
-                          IDEWorkbenchMessages.IDEApplication_workspaceCannotBeSetMessage);
-			}
+            }
 
             // by this point it has been determined that the workspace is
             // already in use -- force the user to choose again
-            MessageDialog.openError(shell, IDEWorkbenchMessages.IDEApplication_workspaceInUseTitle,
+            MessageDialog.openError(shell, IDEWorkbenchMessages.IDEApplication_workspaceInUseTitle, 
                     NLS.bind(IDEWorkbenchMessages.IDEApplication_workspaceInUseMessage, workspaceUrl.getFile()));
         }
     }
 
-    @SuppressWarnings("rawtypes")
-    private static boolean isDevLaunchMode(Map args) {
+	private static boolean isDevLaunchMode(Map args) {
 		// see org.eclipse.pde.internal.core.PluginPathFinder.isDevLaunchMode()
 		if (Boolean.getBoolean("eclipse.pde.launch")) //$NON-NLS-1$
 			return true;
 		return args.containsKey("-pdelaunch"); //$NON-NLS-1$
 	}
-
+	
     /**
      * Open a workspace selection dialog on the argument shell, populating the
      * argument data with the user's selection. Perform first level validation
      * on the selection by comparing the version information. This method does
      * not examine the runtime state (e.g., is the workspace already locked?).
-     *
+     * 
      * @param shell
      * @param launchData
      * @param force
@@ -326,21 +289,12 @@ public class IDEApplication implements IApplication, IExecutableExtension {
      * @return An URL storing the selected workspace or null if the user has
      *         canceled the launch operation.
      */
-	private URL promptForWorkspace(Shell shell, ChooseWorkspaceData launchData,
+    private URL promptForWorkspace(Shell shell, ChooseWorkspaceData launchData,
 			boolean force) {
         URL url = null;
-
         do {
-			new ChooseWorkspaceDialog(shell, launchData, false, true) {
-				@Override
-				protected Shell getParentShell() {
-					// Bug 429308: Make workspace selection dialog visible
-					// in the task manager of the OS
-					return null;
-				}
-
-			}.prompt(force);
-
+        	// okay to use the shell now - this is the splash shell
+            new ChooseWorkspaceDialog(shell, launchData, false, true).prompt(force);
             String instancePath = launchData.getSelection();
             if (instancePath == null) {
 				return null;
@@ -369,7 +323,7 @@ public class IDEApplication implements IApplication, IExecutableExtension {
 
             try {
                 // Don't use File.toURL() since it adds a leading slash that Platform does not
-                // handle properly.  See bug 54081 for more details.
+                // handle properly.  See bug 54081 for more details.  
                 String path = workspace.getAbsolutePath().replace(
                         File.separatorChar, '/');
                 url = new URL("file", null, path); //$NON-NLS-1$
@@ -386,19 +340,12 @@ public class IDEApplication implements IApplication, IExecutableExtension {
         return url;
     }
 
-	/**
-	 * @return true if the shell is not <code>null</code> and not disposed
-	 */
-	static boolean isValidShell(Shell shell) {
-		return shell != null && !shell.isDisposed();
-	}
-
     /**
      * Return true if the argument directory is ok to use as a workspace and
      * false otherwise. A version check will be performed, and a confirmation
      * box may be displayed on the argument shell if an older version is
      * detected.
-     *
+     * 
      * @return true if the argument URL is ok to use as a workspace and false
      *         otherwise.
      */
@@ -408,12 +355,8 @@ public class IDEApplication implements IApplication, IExecutableExtension {
 			return false;
 		}
 
-        if (WORKSPACE_CHECK_REFERENCE_BUNDLE_VERSION == null) {
-            // no reference bundle installed, no check possible
-            return true;
-        }
+        String version = readWorkspaceVersion(url);
 
-        Version version = readWorkspaceVersion(url);
         // if the version could not be read, then there is not any existing
         // workspace data to trample, e.g., perhaps its a new directory that
         // is just starting to be used as a workspace
@@ -421,62 +364,33 @@ public class IDEApplication implements IApplication, IExecutableExtension {
 			return true;
 		}
 
-        final Version ide_version = toMajorMinorVersion(WORKSPACE_CHECK_REFERENCE_BUNDLE_VERSION);
-        Version workspace_version = toMajorMinorVersion(version);
-        int versionCompareResult = workspace_version.compareTo(ide_version);
+        final int ide_version = Integer.parseInt(WORKSPACE_VERSION_VALUE);
+        int workspace_version = Integer.parseInt(version);
 
         // equality test is required since any version difference (newer
         // or older) may result in data being trampled
-		if (versionCompareResult == 0) {
+        if (workspace_version == ide_version) {
 			return true;
 		}
 
-		// At this point workspace has been detected to be from a version
-		// other than the current ide version -- find out if the user wants
-		// to use it anyhow.
-		int severity;
-		String title;
-		String message;
-		if (versionCompareResult < 0) {
-			// Workspace < IDE. Update must be possible without issues,
-			// so only inform user about it.
-			severity = MessageDialog.INFORMATION;
-			title = IDEWorkbenchMessages.IDEApplication_versionTitle_olderWorkspace;
-			message = NLS.bind(IDEWorkbenchMessages.IDEApplication_versionMessage_olderWorkspace, url.getFile());
-		} else {
-			// Workspace > IDE. It must have been opened with a newer IDE version.
-			// Downgrade might be problematic, so warn user about it.
-			severity = MessageDialog.WARNING;
-			title = IDEWorkbenchMessages.IDEApplication_versionTitle_newerWorkspace;
-			message = NLS.bind(IDEWorkbenchMessages.IDEApplication_versionMessage_newerWorkspace, url.getFile());
-		}
+        // At this point workspace has been detected to be from a version
+        // other than the current ide version -- find out if the user wants
+        // to use it anyhow.
+        String title = IDEWorkbenchMessages.IDEApplication_versionTitle;
+        String message = NLS.bind(IDEWorkbenchMessages.IDEApplication_versionMessage, url.getFile());
 
-		IPersistentPreferenceStore prefStore = new ScopedPreferenceStore(ConfigurationScope.INSTANCE, IDEWorkbenchPlugin.IDE_WORKBENCH);
-		boolean keepOnWarning = prefStore.getBoolean(IDEInternalPreferences.WARN_ABOUT_WORKSPACE_INCOMPATIBILITY);
-		if (keepOnWarning) {
-			MessageDialogWithToggle dialog = new MessageDialogWithToggle(shell, title, null, message, severity,
-					new String[] {IDialogConstants.OK_LABEL, IDialogConstants.CANCEL_LABEL}, 0,
-					IDEWorkbenchMessages.IDEApplication_version_doNotWarnAgain, false);
-			if (dialog.open() != Window.OK) {
-				return false;
-			}
-			keepOnWarning = !dialog.getToggleState();
-			try {
-				prefStore.setValue(IDEInternalPreferences.WARN_ABOUT_WORKSPACE_INCOMPATIBILITY, keepOnWarning);
-				prefStore.save();
-			} catch (IOException e) {
-				IDEWorkbenchPlugin.log("Error writing to configuration preferences", //$NON-NLS-1$
-					new Status(IStatus.ERROR, IDEWorkbenchPlugin.IDE_WORKBENCH, e.getMessage(), e));
-			}
-		}
-		return true;
-	}
+        MessageBox mbox = new MessageBox(shell, SWT.OK | SWT.CANCEL
+                | SWT.ICON_WARNING | SWT.APPLICATION_MODAL);
+        mbox.setText(title);
+        mbox.setMessage(message);
+        return mbox.open() == SWT.OK;
+    }
 
     /**
      * Look at the argument URL for the workspace's version information. Return
      * that version if found and null otherwise.
      */
-    private static Version readWorkspaceVersion(URL workspace) {
+    private static String readWorkspaceVersion(URL workspace) {
         File versionFile = getVersionFile(workspace, false);
         if (versionFile == null || !versionFile.exists()) {
 			return null;
@@ -494,27 +408,12 @@ public class IDEApplication implements IApplication, IExecutableExtension {
                 is.close();
             }
 
-            String versionString = props.getProperty(WORKSPACE_CHECK_REFERENCE_BUNDLE_NAME);
-            if (versionString != null) {
-                return Version.parseVersion(versionString);
-            }
-            versionString= props.getProperty(WORKSPACE_CHECK_REFERENCE_BUNDLE_NAME_LEGACY);
-            if (versionString != null) {
-                return Version.parseVersion(versionString);
-            }
-            return null;
+            return props.getProperty(WORKSPACE_VERSION_KEY);
         } catch (IOException e) {
-            IDEWorkbenchPlugin.log("Could not read version file " + versionFile, new Status( //$NON-NLS-1$
+            IDEWorkbenchPlugin.log("Could not read version file", new Status( //$NON-NLS-1$
                     IStatus.ERROR, IDEWorkbenchPlugin.IDE_WORKBENCH,
                     IStatus.ERROR,
-                    e.getMessage() == null ? "" : e.getMessage(), //$NON-NLS-1$
-                    e));
-            return null;
-        } catch (IllegalArgumentException e) {
-            IDEWorkbenchPlugin.log("Could not parse version in " + versionFile, new Status( //$NON-NLS-1$
-                    IStatus.ERROR, IDEWorkbenchPlugin.IDE_WORKBENCH,
-                    IStatus.ERROR,
-                    e.getMessage() == null ? "" : e.getMessage(), //$NON-NLS-1$
+                    e.getMessage() == null ? "" : e.getMessage(), //$NON-NLS-1$, 
                     e));
             return null;
         }
@@ -526,11 +425,6 @@ public class IDEApplication implements IApplication, IExecutableExtension {
      * so the function is silent about failure
      */
     private static void writeWorkspaceVersion() {
-        if (WORKSPACE_CHECK_REFERENCE_BUNDLE_VERSION == null) {
-            // no reference bundle installed, no check possible
-            return;
-        }
-
         Location instanceLoc = Platform.getInstanceLocation();
         if (instanceLoc == null || instanceLoc.isReadOnly()) {
 			return;
@@ -543,17 +437,11 @@ public class IDEApplication implements IApplication, IExecutableExtension {
 
         OutputStream output = null;
         try {
+            String versionLine = WORKSPACE_VERSION_KEY + '='
+                    + WORKSPACE_VERSION_VALUE;
+
             output = new FileOutputStream(versionFile);
-            Properties props = new Properties();
-
-            // write new property
-            props.setProperty(WORKSPACE_CHECK_REFERENCE_BUNDLE_NAME, WORKSPACE_CHECK_REFERENCE_BUNDLE_VERSION.toString());
-
-            // write legacy property with an incremented version,
-            // so that pre-4.4 IDEs will also warn about the workspace
-            props.setProperty(WORKSPACE_CHECK_REFERENCE_BUNDLE_NAME_LEGACY, WORKSPACE_CHECK_LEGACY_VERSION_INCREMENTED);
-
-            props.store(output, null);
+            output.write(versionLine.getBytes("UTF-8")); //$NON-NLS-1$
         } catch (IOException e) {
             IDEWorkbenchPlugin.log("Could not write version file", //$NON-NLS-1$
                     StatusUtil.newStatus(IStatus.ERROR, e.getMessage(), e));
@@ -572,7 +460,7 @@ public class IDEApplication implements IApplication, IExecutableExtension {
      * The version file is stored in the metadata area of the workspace. This
      * method returns an URL to the file or null if the directory or file does
      * not exist (and the create parameter is false).
-     *
+     * 
      * @param create
      *            If the directory and file does not exist this parameter
      *            controls whether it will be created.
@@ -605,21 +493,15 @@ public class IDEApplication implements IApplication, IExecutableExtension {
         }
     }
 
-    /**
-     * @return the major and minor parts of the given version
+    /* (non-Javadoc)
+     * @see org.eclipse.equinox.app.IApplication#stop()
      */
-    private static Version toMajorMinorVersion(Version version) {
-        return new Version(version.getMajor(), version.getMinor(), 0);
-    }
-
-	@Override
 	public void stop() {
 		final IWorkbench workbench = PlatformUI.getWorkbench();
 		if (workbench == null)
 			return;
 		final Display display = workbench.getDisplay();
 		display.syncExec(new Runnable() {
-			@Override
 			public void run() {
 				if (!display.isDisposed())
 					workbench.close();
