@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2015 IBM Corporation and others.
+ * Copyright (c) 2004, 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -13,6 +13,7 @@ package org.eclipse.ui.commands;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+
 import org.eclipse.core.commands.IHandlerAttributes;
 import org.eclipse.jface.action.IAction;
 import org.eclipse.jface.util.IPropertyChangeListener;
@@ -23,13 +24,11 @@ import org.eclipse.ui.actions.RetargetAction;
 /**
  * This class adapts instances of <code>IAction</code> to
  * <code>IHandler</code>.
- *
+ * 
  * @since 3.0
  * @deprecated Please use the "org.eclipse.core.commands" plug-in instead.
  * @see org.eclipse.jface.commands.ActionHandler
  */
-@Deprecated
-@SuppressWarnings("all")
 public final class ActionHandler extends AbstractHandler {
 
     /**
@@ -74,9 +73,9 @@ public final class ActionHandler extends AbstractHandler {
      * The map of attributes values. The keys are <code>String</code> values
      * of the attribute names (given above). The values can be any type of
      * <code>Object</code>.
-     *
+     * 
      * This map is always null if there are no IHandlerListeners registered.
-     *
+     *  
      */
     private Map attributeValuesByName;
 
@@ -90,11 +89,10 @@ public final class ActionHandler extends AbstractHandler {
     /**
      * Creates a new instance of this class given an instance of
      * <code>IAction</code>.
-     *
+     * 
      * @param action
      *            the action. Must not be <code>null</code>.
      */
-	@Deprecated
     public ActionHandler(IAction action) {
         if (action == null) {
 			throw new NullPointerException();
@@ -107,8 +105,6 @@ public final class ActionHandler extends AbstractHandler {
      * @see org.eclipse.ui.commands.IHandler#addHandlerListener(org.eclipse.ui.commands.IHandlerListener)
      * @since 3.1
      */
-	@Override
-	@Deprecated
     public void addHandlerListener(IHandlerListener handlerListener) {
         if (!hasListeners()) {
             attachListener();
@@ -120,7 +116,7 @@ public final class ActionHandler extends AbstractHandler {
     /**
      * When a listener is attached to this handler, then this registers a
      * listener with the underlying action.
-     *
+     * 
      * @since 3.1
      */
     private final void attachListener() {
@@ -128,8 +124,7 @@ public final class ActionHandler extends AbstractHandler {
             attributeValuesByName = getAttributeValuesByNameFromAction();
 
             propertyChangeListener = new IPropertyChangeListener() {
-                @Override
-				public void propertyChange(
+                public void propertyChange(
                         PropertyChangeEvent propertyChangeEvent) {
                     String property = propertyChangeEvent.getProperty();
                     if (IAction.ENABLED.equals(property)
@@ -156,9 +151,9 @@ public final class ActionHandler extends AbstractHandler {
     /**
      * When no more listeners are registered, then this is used to removed the
      * property change listener from the underlying action.
-     *
+     * 
      * @since 3.1
-     *
+     *  
      */
     private final void detachListener() {
         this.action.removePropertyChangeListener(propertyChangeListener);
@@ -168,20 +163,19 @@ public final class ActionHandler extends AbstractHandler {
 
     /**
      * Removes the property change listener from the action.
-     *
+     * 
      * @see org.eclipse.ui.commands.IHandler#dispose()
      */
-	@Override
-	@Deprecated
     public void dispose() {
         if (hasListeners()) {
             action.removePropertyChangeListener(propertyChangeListener);
         }
     }
 
-
-	@Override
-	@Deprecated
+   
+    /* (non-Javadoc)
+     * @see org.eclipse.ui.commands.IHandler#execute(java.util.Map)
+     */
     public Object execute(Map parameterValuesByName) throws ExecutionException {
         if ((action.getStyle() == IAction.AS_CHECK_BOX)
                 || (action.getStyle() == IAction.AS_RADIO_BUTTON)) {
@@ -198,17 +192,17 @@ public final class ActionHandler extends AbstractHandler {
 
     /**
      * Returns the action associated with this handler
-     *
+     * 
      * @return the action associated with this handler (not null)
      * @since 3.1
      */
-	@Deprecated
     public IAction getAction() {
         return action;
     }
 
-	@Override
-	@Deprecated
+    /* (non-Javadoc)
+     * @see org.eclipse.ui.commands.IHandler#getAttributeValuesByName()
+     */
     public Map getAttributeValuesByName() {
         if (attributeValuesByName == null) {
             return getAttributeValuesByNameFromAction();
@@ -220,10 +214,10 @@ public final class ActionHandler extends AbstractHandler {
     /**
      * An accessor for the attribute names from the action. This reads out all
      * of the attributes from an action into a local map.
-     *
+     * 
      * @return A map of the attribute values indexed by the attribute name. The
      *         attributes names are strings, but the values can by any object.
-     *
+     *  
      */
     private Map getAttributeValuesByNameFromAction() {
         Map map = new HashMap();
@@ -238,7 +232,7 @@ public final class ActionHandler extends AbstractHandler {
         }
         map.put(ATTRIBUTE_HANDLED, handled ? Boolean.TRUE : Boolean.FALSE);
         map.put(ATTRIBUTE_ID, action.getId());
-		map.put(ATTRIBUTE_STYLE, Integer.valueOf(action.getStyle()));
+        map.put(ATTRIBUTE_STYLE, new Integer(action.getStyle()));
         return Collections.unmodifiableMap(map);
     }
 
@@ -246,8 +240,6 @@ public final class ActionHandler extends AbstractHandler {
      * @see org.eclipse.ui.commands.IHandler#removeHandlerListener(org.eclipse.ui.commands.IHandlerListener)
      * @since 3.1
      */
-	@Override
-	@Deprecated
     public void removeHandlerListener(IHandlerListener handlerListener) {
         super.removeHandlerListener(handlerListener);
 
@@ -255,9 +247,10 @@ public final class ActionHandler extends AbstractHandler {
             detachListener();
         }
     }
-
-	@Override
-	@Deprecated
+	
+	/* (non-Javadoc)
+	 * @see java.lang.Object#toString()
+	 */
 	public final String toString() {
 		final StringBuffer buffer = new StringBuffer();
 
