@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2016 IBM Corporation and others.
+ * Copyright (c) 2000, 2011 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -12,8 +12,6 @@
  *  Peter Friese <peter.friese@gentleware.com>
  *     - Fix for bug 208602 - [Dialogs] Open Type dialog needs accessible labels
  *  Simon Muschel <smuschel@gmx.de> - bug 258493
- *  Lars Vogel <Lars.Vogel@gmail.com> - Bug 440810
- *  Patrik Suzzi <psuzzi@gmail.com> - Bug 485133
  *******************************************************************************/
 package org.eclipse.ui.dialogs;
 
@@ -41,7 +39,7 @@ import org.eclipse.core.runtime.ListenerList;
 import org.eclipse.core.runtime.NullProgressMonitor;
 import org.eclipse.core.runtime.ProgressMonitorWrapper;
 import org.eclipse.core.runtime.Status;
-import org.eclipse.core.runtime.SubMonitor;
+import org.eclipse.core.runtime.SubProgressMonitor;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.jface.action.Action;
 import org.eclipse.jface.action.ActionContributionItem;
@@ -52,7 +50,6 @@ import org.eclipse.jface.action.LegacyActionTools;
 import org.eclipse.jface.action.MenuManager;
 import org.eclipse.jface.dialogs.IDialogSettings;
 import org.eclipse.jface.viewers.ContentViewer;
-import org.eclipse.jface.viewers.DelegatingStyledCellLabelProvider.IStyledLabelProvider;
 import org.eclipse.jface.viewers.DoubleClickEvent;
 import org.eclipse.jface.viewers.IColorProvider;
 import org.eclipse.jface.viewers.IContentProvider;
@@ -75,6 +72,7 @@ import org.eclipse.jface.viewers.TableViewer;
 import org.eclipse.jface.viewers.Viewer;
 import org.eclipse.jface.viewers.ViewerCell;
 import org.eclipse.jface.viewers.ViewerFilter;
+import org.eclipse.jface.viewers.DelegatingStyledCellLabelProvider.IStyledLabelProvider;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.accessibility.ACC;
@@ -130,10 +128,11 @@ import org.eclipse.ui.statushandlers.StatusManager;
 /**
  * Shows a list of items to the user with a text entry field for a string
  * pattern used to filter the list of items.
- *
+ * 
  * @since 3.3
  */
-public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog {
+public abstract class FilteredItemsSelectionDialog extends
+		SelectionStatusDialog {
 
 	private static final String DIALOG_BOUNDS_SETTINGS = "DialogBoundsSettings"; //$NON-NLS-1$
 
@@ -179,8 +178,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	private ItemsListLabelProvider itemsListLabelProvider;
 
 	private MenuManager menuManager;
-
-	private MenuManager contextMenuManager;
 
 	private boolean multi;
 
@@ -230,7 +227,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Creates a new instance of the class.
-	 *
+	 * 
 	 * @param shell
 	 *            shell to parent the dialog on
 	 * @param multi
@@ -252,7 +249,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	/**
 	 * Creates a new instance of the class. Created dialog won't allow to select
 	 * more than one item.
-	 *
+	 * 
 	 * @param shell
 	 *            shell to parent the dialog on
 	 */
@@ -262,7 +259,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Adds viewer filter to the dialog items list.
-	 *
+	 * 
 	 * @param filter
 	 *            the new filter
 	 */
@@ -276,9 +273,9 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	 * org.eclipse.jface.viewers.DelegatingStyledCellLabelProvider
 	 * .IStyledLabelProvider}, the style text labels provided by it will be used
 	 * provided that the corresponding preference is set.
-	 *
+	 * 
 	 * @see IWorkbenchPreferenceConstants#USE_COLORED_LABELS
-	 *
+	 * 
 	 * @param listLabelProvider
 	 * 		the label provider for items in the list
 	 */
@@ -288,7 +285,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Returns the label decorator for selected items in the list.
-	 *
+	 * 
 	 * @return the label decorator for selected items in the list
 	 */
 	private ILabelDecorator getListSelectionLabelDecorator() {
@@ -297,7 +294,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Sets the label decorator for selected items in the list.
-	 *
+	 * 
 	 * @param listSelectionLabelDecorator
 	 *            the label decorator for selected items in the list
 	 */
@@ -309,7 +306,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Returns the item list label provider.
-	 *
+	 * 
 	 * @return the item list label provider
 	 */
 	private ItemsListLabelProvider getItemsListLabelProvider() {
@@ -322,16 +319,16 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Sets label provider for the details field.
-	 *
+	 * 
 	 * For a single selection, the element sent to
 	 * {@link ILabelProvider#getImage(Object)} and
 	 * {@link ILabelProvider#getText(Object)} is the selected object, for
 	 * multiple selection a {@link String} with amount of selected items is the
 	 * element.
-	 *
+	 * 
 	 * @see #getSelectedItems() getSelectedItems() can be used to retrieve
 	 *      selected items and get the items count.
-	 *
+	 * 
 	 * @param detailsLabelProvider
 	 *            the label provider for the details field
 	 */
@@ -349,7 +346,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		return detailsLabelProvider;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.window.Window#create()
+	 */
 	public void create() {
 		super.create();
 		pattern.setFocus();
@@ -358,7 +359,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	/**
 	 * Restores dialog using persisted settings. The default implementation
 	 * restores the status of the details line and the selection history.
-	 *
+	 * 
 	 * @param settings
 	 *            settings used to restore dialog
 	 */
@@ -394,29 +395,29 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.window.Window#close()
+	 */
 	public boolean close() {
 		this.filterJob.cancel();
 		this.refreshCacheJob.cancel();
 		this.refreshProgressMessageJob.cancel();
 		if (showViewHandler != null) {
-			IHandlerService service = PlatformUI
+			IHandlerService service = (IHandlerService) PlatformUI
 					.getWorkbench().getService(IHandlerService.class);
 			service.deactivateHandler(showViewHandler);
 			showViewHandler.getHandler().dispose();
 			showViewHandler = null;
 		}
-		if (menuManager != null)
-			menuManager.dispose();
-		if (contextMenuManager != null)
-			contextMenuManager.dispose();
 		storeDialog(getDialogSettings());
 		return super.close();
 	}
 
 	/**
 	 * Stores dialog settings.
-	 *
+	 * 
 	 * @param settings
 	 *            settings used to store dialog
 	 */
@@ -445,7 +446,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Create a new header which is labelled by headerLabel.
-	 *
+	 * 
 	 * @param parent
 	 * @return Label the label of the header
 	 */
@@ -463,7 +464,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 				.length() > 0) ? getMessage()
 				: WorkbenchMessages.FilteredItemsSelectionDialog_patternLabel);
 		headerLabel.addTraverseListener(new TraverseListener() {
-			@Override
 			public void keyTraversed(TraverseEvent e) {
 				if (e.detail == SWT.TRAVERSE_MNEMONIC && e.doit) {
 					e.detail = SWT.TRAVERSE_NONE;
@@ -482,7 +482,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Create the labels for the list and the progress. Return the list label.
-	 *
+	 * 
 	 * @param parent
 	 * @return Label
 	 */
@@ -500,7 +500,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 				.setText(WorkbenchMessages.FilteredItemsSelectionDialog_listLabel);
 
 		listLabel.addTraverseListener(new TraverseListener() {
-			@Override
 			public void keyTraversed(TraverseEvent e) {
 				if (e.detail == SWT.TRAVERSE_MNEMONIC && e.doit) {
 					e.detail = SWT.TRAVERSE_NONE;
@@ -528,7 +527,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		toolBar.setLayoutData(data);
 
 		toolBar.addMouseListener(new MouseAdapter() {
-			@Override
 			public void mouseDown(MouseEvent e) {
 				showViewMenu();
 			}
@@ -539,7 +537,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		toolItem
 				.setToolTipText(WorkbenchMessages.FilteredItemsSelectionDialog_menu);
 		toolItem.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				showViewMenu();
 			}
@@ -549,10 +546,9 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		fillViewMenu(menuManager);
 
-		IHandlerService service = PlatformUI.getWorkbench()
+		IHandlerService service = (IHandlerService) PlatformUI.getWorkbench()
 				.getService(IHandlerService.class);
 		IHandler handler = new AbstractHandler() {
-			@Override
 			public Object execute(ExecutionEvent event) {
 				showViewMenu();
 				return null;
@@ -565,7 +561,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Fills the menu of the dialog.
-	 *
+	 * 
 	 * @param menuManager
 	 *            the menu manager
 	 */
@@ -587,12 +583,12 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
      * Hook that allows to add actions to the context menu.
 	 * <p>
 	 * Subclasses may extend in order to add other actions.</p>
-     *
+     * 
      * @param menuManager the context menu manager
      * @since 3.5
      */
 	protected void fillContextMenu(IMenuManager menuManager) {
-		List selectedElements = list.getStructuredSelection().toList();
+		List selectedElements= ((StructuredSelection)list.getSelection()).toList();
 
 		Object item= null;
 
@@ -616,30 +612,33 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		removeHistoryActionContributionItem = new ActionContributionItem(
 				removeHistoryItemAction);
 
-		contextMenuManager = new MenuManager();
-		contextMenuManager.setRemoveAllWhenShown(true);
-		contextMenuManager.addMenuListener(new IMenuListener() {
-			@Override
+		MenuManager manager = new MenuManager();
+		manager.setRemoveAllWhenShown(true);
+		manager.addMenuListener(new IMenuListener() {
 			public void menuAboutToShow(IMenuManager manager) {
 				fillContextMenu(manager);
 			}
 		});
 
 		final Table table = list.getTable();
-		Menu menu= contextMenuManager.createContextMenu(table);
+		Menu menu= manager.createContextMenu(table);
 		table.setMenu(menu);
 	}
 
 	/**
 	 * Creates an extra content area, which will be located above the details.
-	 *
+	 * 
 	 * @param parent
 	 *            parent to create the dialog widgets in
 	 * @return an extra content area
 	 */
 	protected abstract Control createExtendedContentArea(Composite parent);
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.dialogs.Dialog#createDialogArea(org.eclipse.swt.widgets.Composite)
+	 */
 	protected Control createDialogArea(Composite parent) {
 		Composite dialogArea = (Composite) super.createDialogArea(parent);
 
@@ -657,7 +656,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		pattern = new Text(content, SWT.SINGLE | SWT.BORDER | SWT.SEARCH | SWT.ICON_CANCEL);
 		pattern.getAccessible().addAccessibleListener(new AccessibleAdapter() {
-			@Override
 			public void getName(AccessibleEvent e) {
 				e.result = LegacyActionTools.removeMnemonics(headerLabel
 						.getText());
@@ -672,7 +670,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 				| SWT.BORDER | SWT.V_SCROLL | SWT.VIRTUAL);
 		list.getTable().getAccessible().addAccessibleListener(
 				new AccessibleAdapter() {
-					@Override
 					public void getName(AccessibleEvent e) {
 						if (e.childID == ACC.CHILDID_SELF) {
 							e.result = LegacyActionTools
@@ -692,14 +689,12 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		createPopupMenu();
 
 		pattern.addModifyListener(new ModifyListener() {
-			@Override
 			public void modifyText(ModifyEvent e) {
 				applyFilter();
 			}
 		});
 
 		pattern.addKeyListener(new KeyAdapter() {
-			@Override
 			public void keyPressed(KeyEvent e) {
 				if (e.keyCode == SWT.ARROW_DOWN) {
 					if (list.getTable().getItemCount() > 0) {
@@ -710,7 +705,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		});
 
 		list.addSelectionChangedListener(new ISelectionChangedListener() {
-			@Override
 			public void selectionChanged(SelectionChangedEvent event) {
 				StructuredSelection selection = (StructuredSelection) event
 						.getSelection();
@@ -719,14 +713,12 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		});
 
 		list.addDoubleClickListener(new IDoubleClickListener() {
-			@Override
 			public void doubleClick(DoubleClickEvent event) {
 				handleDoubleClick();
 			}
 		});
 
 		list.getTable().addKeyListener(new KeyAdapter() {
-			@Override
 			public void keyPressed(KeyEvent e) {
 
 				if (e.keyCode == SWT.DEL) {
@@ -789,9 +781,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		details = new DetailsContentViewer(content, SWT.BORDER | SWT.FLAT);
 		details.setVisible(toggleStatusLineAction.isChecked());
-		details.setContentProvider(new IContentProvider() {
-			// intentionally empty
-		});
+		details.setContentProvider(new NullContentProvider());
 		details.setLabelProvider(getDetailsLabelProvider());
 
 		applyDialogFont(content);
@@ -848,7 +838,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 					.setInput(NLS
 							.bind(
 									WorkbenchMessages.FilteredItemsSelectionDialog_nItemsSelected,
-									Integer.valueOf(selection.size())));
+									new Integer(selection.size())));
 			break;
 		}
 
@@ -857,7 +847,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	/**
 	 * Handle selection in the items list by updating labels of selected and
 	 * unselected items and refresh the details field using the selection.
-	 *
+	 * 
 	 * @param selection
 	 *            the new selection
 	 */
@@ -924,7 +914,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		updateStatus(status);
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.window.Dialog#getDialogBoundsSettings()
+	 */
 	protected IDialogSettings getDialogBoundsSettings() {
 		IDialogSettings settings = getDialogSettings();
 		IDialogSettings section = settings.getSection(DIALOG_BOUNDS_SETTINGS);
@@ -938,7 +932,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Returns the dialog settings. Returned object can't be null.
-	 *
+	 * 
 	 * @return return dialog settings for this dialog
 	 */
 	protected abstract IDialogSettings getDialogSettings();
@@ -978,10 +972,9 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Updates the progress label.
-	 *
+	 * 
 	 * @deprecated
 	 */
-	@Deprecated
 	public void updateProgressLabel() {
 		scheduleProgressMessageRefresh();
 	}
@@ -992,7 +985,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	 * matches is added.
 	 * <p>
 	 * This is a long running operation and should be called in a job.
-	 *
+	 * 
 	 * @param checkDuplicates
 	 *            <code>true</code> if data concerning elements duplication
 	 *            should be computed - it takes much more time than the standard
@@ -1025,7 +1018,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			refreshProgressMessageJob.scheduleProgressRefresh(null);
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.ui.dialogs.SelectionStatusDialog#computeResult()
+	 */
 	protected void computeResult() {
 
 		List selectedElements = ((StructuredSelection) list.getSelection())
@@ -1050,7 +1047,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	/*
 	 * @see org.eclipse.ui.dialogs.SelectionStatusDialog#updateStatus(org.eclipse.core.runtime.IStatus)
 	 */
-	@Override
 	protected void updateStatus(IStatus status) {
 		this.status = status;
 		super.updateStatus(status);
@@ -1059,7 +1055,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	/*
 	 * @see Dialog#okPressed()
 	 */
-	@Override
 	protected void okPressed() {
 		if (status != null
 				&& (status.isOK() || status.getCode() == IStatus.INFO)) {
@@ -1071,7 +1066,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	 * Sets the initial pattern used by the filter. This text is copied into the
 	 * selection input on the dialog. A full selection is used in the pattern
 	 * input field.
-	 *
+	 * 
 	 * @param text
 	 *            initial pattern for the filter
 	 * @see FilteredItemsSelectionDialog#FULL_SELECTION
@@ -1084,7 +1079,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	 * Sets the initial pattern used by the filter. This text is copied into the
 	 * selection input on the dialog. The <code>selectionMode</code> is used
 	 * to choose selection type for the input field.
-	 *
+	 * 
 	 * @param text
 	 *            initial pattern for the filter
 	 * @param selectionMode
@@ -1099,7 +1094,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Gets initial pattern.
-	 *
+	 * 
 	 * @return initial pattern, or <code>null</code> if initial pattern is not
 	 *         set
 	 */
@@ -1109,7 +1104,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Returns the current selection.
-	 *
+	 * 
 	 * @return the current selection
 	 */
 	protected StructuredSelection getSelectedItems() {
@@ -1141,7 +1136,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	 * Validates the item. When items on the items list are selected or
 	 * deselected, it validates each item in the selection and the dialog status
 	 * depends on all validations.
-	 *
+	 * 
 	 * @param item
 	 *            an item to be checked
 	 * @return status of the dialog to be set
@@ -1150,7 +1145,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Creates an instance of a filter.
-	 *
+	 * 
 	 * @return a filter for items on the items list. Can be <code>null</code>,
 	 *         no filtering will be applied then, causing no item to be shown in
 	 *         the list.
@@ -1187,14 +1182,14 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	 * will be probably created as an anonymous class. Parameters passed to the
 	 * <code>compare(java.lang.Object, java.lang.Object)</code> are going to
 	 * be the same type as the one used in the content provider.
-	 *
+	 * 
 	 * @return comparator to sort items content provider
 	 */
 	protected abstract Comparator getItemsComparator();
 
 	/**
 	 * Fills the content provider with matching items.
-	 *
+	 * 
 	 * @param contentProvider
 	 *            collector to add items to.
 	 *            {@link FilteredItemsSelectionDialog.AbstractContentProvider#add(Object, FilteredItemsSelectionDialog.ItemsFilter)}
@@ -1212,7 +1207,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Removes selected items from history.
-	 *
+	 * 
 	 * @param items
 	 *            items to be removed
 	 */
@@ -1227,7 +1222,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Removes an item from history.
-	 *
+	 * 
 	 * @param item
 	 *            an item to remove
 	 * @return removed item
@@ -1238,7 +1233,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Adds item to history.
-	 *
+	 * 
 	 * @param item
 	 *            the item to be added
 	 */
@@ -1248,7 +1243,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Returns a history comparator.
-	 *
+	 * 
 	 * @return decorated comparator
 	 */
 	private Comparator getHistoryComparator() {
@@ -1257,7 +1252,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Returns the history of selected elements.
-	 *
+	 * 
 	 * @return history of selected elements, or <code>null</code> if it is not
 	 *         set
 	 */
@@ -1267,7 +1262,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Sets new history.
-	 *
+	 * 
 	 * @param selectionHistory
 	 *            the history
 	 */
@@ -1278,7 +1273,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Indicates whether the given item is a history item.
-	 *
+	 * 
 	 * @param item
 	 *            the item to be investigated
 	 * @return <code>true</code> if the given item exists in history,
@@ -1290,7 +1285,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Indicates whether the given item is a duplicate.
-	 *
+	 * 
 	 * @param item
 	 *            the item to be investigated
 	 * @return <code>true</code> if the item is duplicate, <code>false</code>
@@ -1302,7 +1297,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Sets separator label
-	 *
+	 * 
 	 * @param separatorLabel
 	 *            the label showed on separator
 	 */
@@ -1312,7 +1307,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 	/**
 	 * Returns name for then given object.
-	 *
+	 * 
 	 * @param item
 	 *            an object from the content provider. Subclasses should pay
 	 *            attention to the passed argument. They should either only pass
@@ -1334,7 +1329,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 					IAction.AS_CHECK_BOX);
 		}
 
-		@Override
 		public void run() {
 			details.setVisible(isChecked());
 		}
@@ -1366,7 +1360,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	 * could be displayed earlier</li>
 	 * <li> refreshing the UI have to be run in a UIJob</li>
 	 * </ul>
-	 *
+	 * 
 	 * @see org.eclipse.ui.dialogs.FilteredItemsSelectionDialog.FilterJob
 	 * @see org.eclipse.ui.dialogs.FilteredItemsSelectionDialog.RefreshJob
 	 * @see org.eclipse.ui.dialogs.FilteredItemsSelectionDialog.RefreshCacheJob
@@ -1383,7 +1377,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			setSystem(true);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.ui.progress.UIJob#runInUIThread(org.eclipse.core.runtime.IProgressMonitor)
+		 */
 		public IStatus runInUIThread(IProgressMonitor monitor) {
 			if (monitor.isCanceled())
 				return new Status(IStatus.OK, WorkbenchPlugin.PI_WORKBENCH,
@@ -1420,7 +1418,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			setSystem(true);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.ui.progress.UIJob#runInUIThread(org.eclipse.core.runtime.IProgressMonitor)
+		 */
 		public IStatus runInUIThread(IProgressMonitor monitor) {
 
 			if (!progressLabel.isDisposed())
@@ -1441,7 +1443,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Schedule progress refresh job.
-		 *
+		 * 
 		 * @param progressMonitor
 		 *            used during refresh progress label
 		 */
@@ -1458,9 +1460,9 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	/**
 	 * A job responsible for computing filtered items list presented using
 	 * <code>RefreshJob</code>.
-	 *
+	 * 
 	 * @see FilteredItemsSelectionDialog.RefreshJob
-	 *
+	 * 
 	 */
 	private class RefreshCacheJob extends Job {
 
@@ -1483,7 +1485,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			refreshJob.cancel();
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.core.runtime.jobs.Job#run(org.eclipse.core.runtime.IProgressMonitor)
+		 */
 		protected IStatus run(IProgressMonitor monitor) {
 			if (monitor.isCanceled()) {
 				return new Status(IStatus.CANCEL, WorkbenchPlugin.PI_WORKBENCH,
@@ -1506,7 +1512,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.core.runtime.jobs.Job#canceling()
+		 */
 		protected void canceling() {
 			super.canceling();
 			contentProvider.stopReloadingCache();
@@ -1524,7 +1534,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 					WorkbenchMessages.FilteredItemsSelectionDialog_removeItemsFromHistoryAction);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.action.Action#run()
+		 */
 		public void run() {
 			List selectedElements = ((StructuredSelection) list.getSelection())
 					.toList();
@@ -1547,7 +1561,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Creates a new instance of the class.
-		 *
+		 * 
 		 * @param provider
 		 *            the label provider for all items, not <code>null</code>
 		 * @param selectionDecorator
@@ -1570,7 +1584,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Sets new selection decorator.
-		 *
+		 * 
 		 * @param newSelectionDecorator
 		 *            new label decorator for selected items in the list
 		 */
@@ -1589,7 +1603,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Gets selection decorator.
-		 *
+		 * 
 		 * @return the label decorator for selected items in the list
 		 */
 		public ILabelDecorator getSelectionDecorator() {
@@ -1598,7 +1612,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Sets new label provider.
-		 *
+		 * 
 		 * @param newProvider
 		 *            new label provider for items in the list, not
 		 *            <code>null</code>
@@ -1636,6 +1650,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			return false;
 		}
 
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.ILabelProvider#getText(java.lang.Object)
+		 */
 		private String getText(Object element) {
 			if (element instanceof ItemsListSeparator) {
 				return getSeparatorLabel(((ItemsListSeparator) element)
@@ -1663,7 +1682,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			return string;
 		}
 
-		@Override
 		public void update(ViewerCell cell) {
 			Object element = cell.getElement();
 
@@ -1718,12 +1736,20 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			return result.toString().trim();
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IBaseLabelProvider#addListener(org.eclipse.jface.viewers.ILabelProviderListener)
+		 */
 		public void addListener(ILabelProviderListener listener) {
 			listeners.add(listener);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IBaseLabelProvider#dispose()
+		 */
 		public void dispose() {
 			provider.removeListener(this);
 			provider.dispose();
@@ -1736,7 +1762,12 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			super.dispose();
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IBaseLabelProvider#isLabelProperty(java.lang.Object,
+		 *      java.lang.String)
+		 */
 		public boolean isLabelProperty(Object element, String property) {
 			if (provider.isLabelProperty(element, property)) {
 				return true;
@@ -1748,7 +1779,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			return false;
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IBaseLabelProvider#removeListener(org.eclipse.jface.viewers.ILabelProviderListener)
+		 */
 		public void removeListener(ILabelProviderListener listener) {
 			listeners.remove(listener);
 		}
@@ -1784,7 +1819,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			return null;
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.ILabelProviderListener#labelProviderChanged(org.eclipse.jface.viewers.LabelProviderChangedEvent)
+		 */
 		public void labelProviderChanged(LabelProviderChangedEvent event) {
 			Object[] l = listeners.getListeners();
 			for (int i = 0; i < listeners.size(); i++) {
@@ -1803,7 +1842,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Creates a new instance of the class.
-		 *
+		 * 
 		 * @param name
 		 *            the name of the separator
 		 */
@@ -1813,7 +1852,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Returns the name of this separator.
-		 *
+		 * 
 		 * @return the name of the separator
 		 */
 		public String getName() {
@@ -1826,7 +1865,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	 * process. It is used by <code>RefreshProgressMessageJob</code> to
 	 * refresh progress message. State of this monitor illustrates state of
 	 * filtering or cache refreshing process.
-	 *
+	 * 
 	 */
 	private class GranualProgressMonitor extends ProgressMonitorWrapper {
 
@@ -1842,7 +1881,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Creates instance of <code>GranualProgressMonitor</code>.
-		 *
+		 * 
 		 * @param monitor
 		 *            progress to be wrapped
 		 */
@@ -1852,27 +1891,40 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Checks if filtering has been done
-		 *
+		 * 
 		 * @return true if filtering work has been done false in other way
 		 */
 		public boolean isDone() {
 			return done;
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#setTaskName(java.lang.String)
+		 */
 		public void setTaskName(String name) {
 			super.setTaskName(name);
 			this.name = name;
 			this.subName = null;
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#subTask(java.lang.String)
+		 */
 		public void subTask(String name) {
 			super.subTask(name);
 			this.subName = name;
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#beginTask(java.lang.String,
+		 *      int)
+		 */
 		public void beginTask(String name, int totalWork) {
 			super.beginTask(name, totalWork);
 			if (this.name == null)
@@ -1881,25 +1933,41 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			refreshProgressMessageJob.scheduleProgressRefresh(this);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#worked(int)
+		 */
 		public void worked(int work) {
 			super.worked(work);
 			internalWorked(work);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#done()
+		 */
 		public void done() {
 			done = true;
 			super.done();
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#setCanceled(boolean)
+		 */
 		public void setCanceled(boolean b) {
 			done = b;
 			super.setCanceled(b);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#internalWorked(double)
+		 */
 		public void internalWorked(double work) {
 			worked = worked + work;
 		}
@@ -1927,7 +1995,8 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 							WorkbenchMessages.FilteredItemsSelectionDialog_taskProgressMessage,
 							new Object[] {
 									message,
-									Integer.valueOf((int) ((worked * 100) / totalWork)) });
+									new Integer(
+											(int) ((worked * 100) / totalWork)) });
 
 		}
 
@@ -1951,7 +2020,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			setSystem(true);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.core.runtime.jobs.Job#run(org.eclipse.core.runtime.IProgressMonitor)
+		 */
 		protected IStatus run(IProgressMonitor monitor) {
 
 			this.itemsFilter = filter;
@@ -1976,7 +2049,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	/**
 	 * Filters items in indicated set and history. During filtering, it
 	 * refreshes the dialog (progress monitor and elements list).
-	 *
+	 * 
 	 * Depending on the filter, <code>FilterJob</code> decides which kind of
 	 * search will be run inside <code>filterContent</code>. If the last
 	 * filtering is done (last completed filter), is not null, and the new
@@ -2000,7 +2073,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			setSystem(true);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.core.runtime.jobs.Job#run(org.eclipse.core.runtime.IProgressMonitor)
+		 */
 		protected final IStatus run(IProgressMonitor parent) {
 			GranualProgressMonitor monitor = new GranualProgressMonitor(parent);
 			return doRun(monitor);
@@ -2009,7 +2086,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		/**
 		 * Executes job using the given filtering progress monitor. A hook for
 		 * subclasses.
-		 *
+		 * 
 		 * @param monitor
 		 *            progress monitor
 		 * @return result of the execution
@@ -2031,7 +2108,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Main method for the job.
-		 *
+		 * 
 		 * @param monitor
 		 * @throws CoreException
 		 */
@@ -2058,7 +2135,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Filters items.
-		 *
+		 * 
 		 * @param monitor
 		 *            for monitoring progress
 		 * @throws CoreException
@@ -2092,16 +2169,22 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 				lastCompletedFilter = null;
 				lastCompletedResult = null;
 
-				SubMonitor subMonitor = SubMonitor.convert(monitor,
+				SubProgressMonitor subMonitor = null;
+				if (monitor != null) {
+					monitor
+							.beginTask(
 									WorkbenchMessages.FilteredItemsSelectionDialog_searchJob_taskName,
 									100);
+					subMonitor = new SubProgressMonitor(monitor, 95);
 
-				fillContentProvider(contentProvider, itemsFilter, subMonitor.split(95));
+				}
+
+				fillContentProvider(contentProvider, itemsFilter, subMonitor);
 
 				if (monitor != null && !monitor.isCanceled()) {
-					subMonitor.worked(2);
+					monitor.worked(2);
 					contentProvider.rememberResult(itemsFilter);
-					subMonitor.worked(3);
+					monitor.worked(3);
 				}
 			}
 
@@ -2137,7 +2220,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 				private static final long serialVersionUID = 0L;
 
-				@Override
+				/*
+				 * (non-Javadoc)
+				 * 
+				 * @see java.util.LinkedList#add(java.lang.Object)
+				 */
 				public boolean add(Object arg0) {
 					if (this.size() >= MAX_HISTORY_SIZE) {
 						Iterator iterator = this.iterator();
@@ -2162,7 +2249,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Adds object to history.
-		 *
+		 * 
 		 * @param object
 		 *            the item to be added to the history
 		 */
@@ -2173,7 +2260,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Returns <code>true</code> if history contains object.
-		 *
+		 * 
 		 * @param object
 		 *            the item for which check will be executed
 		 * @return <code>true</code> if history contains object
@@ -2185,7 +2272,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Returns <code>true</code> if history is empty.
-		 *
+		 * 
 		 * @return <code>true</code> if history is empty
 		 */
 		public synchronized boolean isEmpty() {
@@ -2194,7 +2281,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Remove element from history.
-		 *
+		 * 
 		 * @param element
 		 *            to remove form the history
 		 * @return <code>true</code> if this list contained the specified
@@ -2206,7 +2293,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Load history elements from memento.
-		 *
+		 * 
 		 * @param memento
 		 *            memento from which the history will be retrieved
 		 */
@@ -2232,7 +2319,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Save history elements to memento.
-		 *
+		 * 
 		 * @param memento
 		 *            memento to which the history will be added
 		 */
@@ -2252,7 +2339,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Gets array of history items.
-		 *
+		 * 
 		 * @return array of history elements
 		 */
 		public synchronized Object[] getHistoryItems() {
@@ -2261,17 +2348,17 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Creates an object using given memento.
-		 *
+		 * 
 		 * @param memento
 		 *            memento used for creating new object
-		 *
+		 * 
 		 * @return the restored object
 		 */
 		protected abstract Object restoreItemFromMemento(IMemento memento);
 
 		/**
 		 * Store object in <code>IMemento</code>.
-		 *
+		 * 
 		 * @param item
 		 *            the item to store
 		 * @param memento
@@ -2298,7 +2385,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Creates new instance of ItemsFilter.
-		 *
+		 * 
 		 * @param searchPattern
 		 *            the pattern to be used when filtering
 		 */
@@ -2321,13 +2408,13 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		 * <code>b</code> is a sub-filter of <code>a</code>, and not
 		 * vice-versa. </i>
 		 * </p>
-		 *
+		 * 
 		 * @param filter
 		 *            the filter to be checked, or <code>null</code>
 		 * @return <code>true</code> if the given filter is sub-filter of this
 		 *         filter, <code>false</code> if the given filter isn't a
 		 *         sub-filter or is <code>null</code>
-		 *
+		 * 
 		 * @see org.eclipse.ui.dialogs.SearchPattern#isSubPattern(org.eclipse.ui.dialogs.SearchPattern)
 		 */
 		public boolean isSubFilter(ItemsFilter filter) {
@@ -2341,13 +2428,13 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		 * Checks whether the provided filter is equal to the current filter.
 		 * The default implementation checks if <code>SearchPattern</code>
 		 * from current filter is equal to the one from provided filter.
-		 *
+		 * 
 		 * @param filter
 		 *            filter to be checked, or <code>null</code>
 		 * @return <code>true</code> if the given filter is equal to current
 		 *         filter, <code>false</code> if given filter isn't equal to
 		 *         current one or if it is <code>null</code>
-		 *
+		 * 
 		 * @see org.eclipse.ui.dialogs.SearchPattern#equalsPattern(org.eclipse.ui.dialogs.SearchPattern)
 		 */
 		public boolean equalsFilter(ItemsFilter filter) {
@@ -2360,7 +2447,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Checks whether the pattern's match rule is camel case.
-		 *
+		 * 
 		 * @return <code>true</code> if pattern's match rule is camel case,
 		 *         <code>false</code> otherwise
 		 */
@@ -2370,9 +2457,9 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Returns the pattern string.
-		 *
+		 * 
 		 * @return pattern for this filter
-		 *
+		 * 
 		 * @see SearchPattern#getPattern()
 		 */
 		public String getPattern() {
@@ -2381,9 +2468,9 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Returns the rule to apply for matching keys.
-		 *
+		 * 
 		 * @return an implementation-specific match rule
-		 *
+		 * 
 		 * @see SearchPattern#getMatchRule() for match rules returned by the
 		 *      default implementation
 		 */
@@ -2393,7 +2480,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Matches text with filter.
-		 *
+		 * 
 		 * @param text
 		 *            the text to match with the filter
 		 * @return <code>true</code> if text matches with filter pattern,
@@ -2406,7 +2493,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		/**
 		 * General method for matching raw name pattern. Checks whether current
 		 * pattern is prefix of name provided item.
-		 *
+		 * 
 		 * @param item
 		 *            item to check
 		 * @return <code>true</code> if current pattern is a prefix of name
@@ -2435,7 +2522,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Matches an item against filter conditions.
-		 *
+		 * 
 		 * @param item
 		 * @return <code>true<code> if item matches against filter conditions, <code>false</code>
 		 *         otherwise
@@ -2445,7 +2532,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		/**
 		 * Checks consistency of an item. Item is inconsistent if was changed or
 		 * removed.
-		 *
+		 * 
 		 * @param item
 		 * @return <code>true</code> if item is consistent, <code>false</code>
 		 *         if item is inconsistent
@@ -2462,12 +2549,12 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		/**
 		 * Adds the item to the content provider iff the filter matches the
 		 * item. Otherwise does nothing.
-		 *
+		 * 
 		 * @param item
 		 *            the item to add
 		 * @param itemsFilter
 		 *            the filter
-		 *
+		 * 
 		 * @see FilteredItemsSelectionDialog.ItemsFilter#matchItem(Object)
 		 */
 		public abstract void add(Object item, ItemsFilter itemsFilter);
@@ -2552,7 +2639,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Sets selection history.
-		 *
+		 * 
 		 * @param selectionHistory
 		 *            The selectionHistory to set.
 		 */
@@ -2586,11 +2673,10 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Adds filtered item.
-		 *
+		 * 
 		 * @param item
 		 * @param itemsFilter
 		 */
-		@Override
 		public void add(Object item, ItemsFilter itemsFilter) {
 			if (itemsFilter == filter) {
 				if (itemsFilter != null) {
@@ -2605,7 +2691,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Add all history items to <code>contentProvider</code>.
-		 *
+		 * 
 		 * @param itemsFilter
 		 */
 		public void addHistoryItems(ItemsFilter itemsFilter) {
@@ -2637,10 +2723,10 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Removes items from history and refreshes the view.
-		 *
+		 * 
 		 * @param item
 		 *            to remove
-		 *
+		 * 
 		 * @return removed item
 		 */
 		public Object removeHistoryElement(Object item) {
@@ -2660,7 +2746,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Adds item to history and refresh view.
-		 *
+		 * 
 		 * @param item
 		 *            to add
 		 */
@@ -2691,10 +2777,10 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Sets/unsets given item as duplicate.
-		 *
+		 * 
 		 * @param item
 		 *            item to change
-		 *
+		 * 
 		 * @param isDuplicate
 		 *            duplicate flag
 		 */
@@ -2709,7 +2795,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Indicates whether given item is a duplicate.
-		 *
+		 * 
 		 * @param item
 		 *            item to check
 		 * @return <code>true</code> if item is duplicate
@@ -2720,7 +2806,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Load history from memento.
-		 *
+		 * 
 		 * @param memento
 		 *            memento from which the history will be retrieved
 		 */
@@ -2731,7 +2817,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Save history to memento.
-		 *
+		 * 
 		 * @param memento
 		 *            memento to which the history will be added
 		 */
@@ -2742,7 +2828,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Gets sorted items.
-		 *
+		 * 
 		 * @return sorted items
 		 */
 		private Object[] getSortedItems() {
@@ -2758,7 +2844,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Remember result of filtering.
-		 *
+		 * 
 		 * @param itemsFilter
 		 */
 		public void rememberResult(ItemsFilter itemsFilter) {
@@ -2772,7 +2858,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IStructuredContentProvider#getElements(java.lang.Object)
+		 */
 		public Object[] getElements(Object inputElement) {
 			return lastFilteredItems.toArray();
 		}
@@ -2781,15 +2871,28 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			return lastFilteredItems.size();
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IContentProvider#dispose()
+		 */
 		public void dispose() {
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IContentProvider#inputChanged(org.eclipse.jface.viewers.Viewer,
+		 *      java.lang.Object, java.lang.Object)
+		 */
 		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.ILazyContentProvider#updateElement(int)
+		 */
 		public void updateElement(int index) {
 
 			FilteredItemsSelectionDialog.this.list.replace((lastFilteredItems
@@ -2802,50 +2905,70 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		 * Main method responsible for getting the filtered items and checking
 		 * for duplicates. It is based on the
 		 * {@link FilteredItemsSelectionDialog.ContentProvider#getFilteredItems(Object, IProgressMonitor)}.
-		 *
+		 * 
 		 * @param checkDuplicates
 		 *            <code>true</code> if data concerning elements
 		 *            duplication should be computed - it takes much more time
 		 *            than standard filtering
-		 *
+		 * 
 		 * @param monitor
 		 *            progress monitor
 		 */
-		public void reloadCache(boolean checkDuplicates, IProgressMonitor monitor) {
+		public void reloadCache(boolean checkDuplicates,
+				IProgressMonitor monitor) {
+
 			reset = false;
 
-			// the work is divided into two actions of the same length
-			int totalWork = checkDuplicates ? 200 : 100;
+			if (monitor != null) {
+				// the work is divided into two actions of the same length
+				int totalWork = checkDuplicates ? 200 : 100;
 
-			SubMonitor subMonitor = SubMonitor.convert(monitor,
-					WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob, totalWork);
+				monitor
+						.beginTask(
+								WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob,
+								totalWork);
+			}
 
 			// the TableViewer's root (the input) is treated as parent
 
-			lastFilteredItems = Arrays.asList(getFilteredItems(list.getInput(), subMonitor.split(100)));
+			lastFilteredItems = Arrays.asList(getFilteredItems(list.getInput(),
+					monitor != null ? new SubProgressMonitor(monitor, 100)
+							: null));
 
-			if (reset || subMonitor.isCanceled()) {
+			if (reset || (monitor != null && monitor.isCanceled())) {
+				if (monitor != null)
+					monitor.done();
 				return;
 			}
 
 			if (checkDuplicates) {
-				checkDuplicates(subMonitor.split(100));
+				checkDuplicates(monitor);
 			}
+			if (monitor != null)
+				monitor.done();
 		}
 
 		private void checkDuplicates(IProgressMonitor monitor) {
 			synchronized (lastFilteredItems) {
-				SubMonitor subMonitor = SubMonitor.convert(monitor,
-						WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob_checkDuplicates,
-						lastFilteredItems.size());
-				HashMap<String, Object> helperMap = new HashMap<>();
+				IProgressMonitor subMonitor = null;
+				int reportEvery = lastFilteredItems.size() / 20;
+				if (monitor != null) {
+					subMonitor = new SubProgressMonitor(monitor, 100);
+					subMonitor
+							.beginTask(
+									WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob_checkDuplicates,
+									5);
+				}
+				HashMap helperMap = new HashMap();
 				for (int i = 0; i < lastFilteredItems.size(); i++) {
-					if (reset || subMonitor.isCanceled())
+					if (reset
+							|| (subMonitor != null && subMonitor.isCanceled()))
 						return;
 					Object item = lastFilteredItems.get(i);
 
 					if (!(item instanceof ItemsListSeparator)) {
-						Object previousItem = helperMap.put(getElementName(item), item);
+						Object previousItem = helperMap.put(
+								getElementName(item), item);
 						if (previousItem != null) {
 							setDuplicateElement(previousItem, true);
 							setDuplicateElement(item, true);
@@ -2854,7 +2977,9 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 						}
 					}
 
-					subMonitor.worked(1);
+					if (subMonitor != null && reportEvery != 0
+							&& (i + 1) % reportEvery == 0)
+						subMonitor.worked(1);
 				}
 				helperMap.clear();
 			}
@@ -2863,7 +2988,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		/**
 		 * Returns an array of items filtered using the provided
 		 * <code>ViewerFilter</code>s with a separator added.
-		 *
+		 * 
 		 * @param parent
 		 *            the parent
 		 * @param monitor
@@ -2942,8 +3067,8 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		 * Adds a filter to this content provider. For an example usage of such
 		 * filters look at the project <code>org.eclipse.ui.ide</code>, class
 		 * <code>org.eclipse.ui.dialogs.FilteredResourcesSelectionDialog.CustomWorkingSetFilter</code>.
-		 *
-		 *
+		 * 
+		 * 
 		 * @param filter
 		 *            the filter to be added
 		 */
@@ -2955,6 +3080,30 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			// currently filters are only added when dialog is restored
 			// if it is changed, refreshing the whole TableViewer should be
 			// added
+		}
+
+	}
+
+	/**
+	 * A content provider that does nothing.
+	 */
+	private class NullContentProvider implements IContentProvider {
+
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IContentProvider#dispose()
+		 */
+		public void dispose() {
+		}
+
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IContentProvider#inputChanged(org.eclipse.jface.viewers.Viewer,
+		 *      java.lang.Object, java.lang.Object)
+		 */
+		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
 		}
 
 	}
@@ -2978,7 +3127,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		/**
 		 * Constructs a new instance of this class given its parent and a style
 		 * value describing its behavior and appearance.
-		 *
+		 * 
 		 * @param parent
 		 *            the parent component
 		 * @param style
@@ -2997,7 +3146,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Shows/hides the content viewer.
-		 *
+		 * 
 		 * @param visible
 		 *            if the content viewer should be visible.
 		 */
@@ -3008,7 +3157,12 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			viewForm.getParent().layout();
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.Viewer#inputChanged(java.lang.Object,
+		 *      java.lang.Object)
+		 */
 		protected void inputChanged(Object input, Object oldInput) {
 			if (oldInput == null) {
 				if (input == null) {
@@ -3022,7 +3176,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.ContentViewer#handleLabelProviderChanged(org.eclipse.jface.viewers.LabelProviderChangedEvent)
+		 */
 		protected void handleLabelProviderChanged(
 				LabelProviderChangedEvent event) {
 			if (event != null) {
@@ -3030,18 +3188,30 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			}
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.Viewer#getControl()
+		 */
 		public Control getControl() {
 			return label;
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.Viewer#getSelection()
+		 */
 		public ISelection getSelection() {
 			// not supported
 			return null;
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.Viewer#refresh()
+		 */
 		public void refresh() {
 			Object input = this.getInput();
 			if (input != null) {
@@ -3055,7 +3225,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		/**
 		 * Sets the given text and image to the label.
-		 *
+		 * 
 		 * @param text
 		 *            the new text or null
 		 * @param image
@@ -3069,14 +3239,19 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			label.setImage(image);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.Viewer#setSelection(org.eclipse.jface.viewers.ISelection,
+		 *      boolean)
+		 */
 		public void setSelection(ISelection selection, boolean reveal) {
 			// not supported
 		}
 
 		/**
 		 * Refreshes the label if currently chosen element is on the list.
-		 *
+		 * 
 		 * @param objs
 		 *            list of changed object
 		 */
@@ -3099,7 +3274,11 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 	 */
 	private class HistoryComparator implements Comparator {
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see java.util.Comparator#compare(java.lang.Object, java.lang.Object)
+		 */
 		public int compare(Object o1, Object o2) {
 			boolean h1 = isHistoryElement(o1);
 			boolean h2 = isHistoryElement(o2);
@@ -3115,14 +3294,14 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 		}
 
 	}
-
+	
 
 	/**
 	 * Get the control where the search pattern is entered. Any filtering should
 	 * be done using an {@link ItemsFilter}. This control should only be
 	 * accessed for listeners that wish to handle events that do not affect
 	 * filtering such as custom traversal.
-	 *
+	 * 
 	 * @return Control or <code>null</code> if the pattern control has not
 	 *         been created.
 	 */
