@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2010 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -24,7 +24,7 @@ import org.eclipse.ui.actions.RetargetAction;
 
 /**
  * An <code>EditorMenuManager</code> is used to sort the contributions
- * made by an editor so that they always appear after the action sets.
+ * made by an editor so that they always appear after the action sets.  
  */
 public class EditorMenuManager extends SubMenuManager {
     private ArrayList wrappers;
@@ -53,8 +53,7 @@ public class EditorMenuManager extends SubMenuManager {
             }
         }
 
-        @Override
-		public Boolean getEnabled(IContributionItem item) {
+        public Boolean getEnabled(IContributionItem item) {
             if (((item instanceof ActionContributionItem) && (((ActionContributionItem) item)
                     .getAction() instanceof RetargetAction))
                     || enabledAllowed) {
@@ -64,30 +63,29 @@ public class EditorMenuManager extends SubMenuManager {
 			}
         }
 
-        @Override
-		public Integer getAccelerator(IContributionItem item) {
+        public Integer getAccelerator(IContributionItem item) {
             if (getEnabled(item) == null) {
 				return getParentMenuManager().getOverrides().getAccelerator(
                         item);
 			} else {
 				// no acclerator if the item is disabled
-				return Integer.valueOf(0);
+                return new Integer(0);
 			}
         }
 
-        @Override
-		public String getAcceleratorText(IContributionItem item) {
+        public String getAcceleratorText(IContributionItem item) {
             return getParentMenuManager().getOverrides().getAcceleratorText(
                     item);
         }
 
-        @Override
-		public String getText(IContributionItem item) {
+        public String getText(IContributionItem item) {
             return getParentMenuManager().getOverrides().getText(item);
         }
-
-        @Override
-		public Boolean getVisible(IContributionItem item) {
+        
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.action.IContributionManagerOverrides#getVisible(org.eclipse.jface.action.IContributionItem)
+         */
+        public Boolean getVisible(IContributionItem item) {
         	return getParentMenuManager().getOverrides().getVisible(item);
         }
     }
@@ -101,25 +99,36 @@ public class EditorMenuManager extends SubMenuManager {
         super(mgr);
     }
 
-    @Override
-	public IContributionItem[] getItems() {
+    /* (non-Javadoc)
+     * Method declared on IContributionManager.
+     */
+    public IContributionItem[] getItems() {
         return getParentMenuManager().getItems();
     }
 
-    @Override
-	public IContributionManagerOverrides getOverrides() {
+    /* (non-Javadoc)
+     * Method declared on IContributionManager.
+     */
+    public IContributionManagerOverrides getOverrides() {
         return overrides;
     }
 
-	/*
-	 * Inserts the new item after any action set contributions which may exist
-	 * within the toolbar to ensure a consistent order for actions.
-	 */
-    @Override
-	public void prependToGroup(String groupName, IContributionItem item) {
+    /* (non-Javadoc)
+     * Method declared on IContributionManager.
+     * Inserts the new item after any action set contributions which may
+     * exist within the toolbar to ensure a consistent order for actions.
+     */
+    public void prependToGroup(String groupName, IContributionItem item) {
         insertAfter(groupName, item);
     }
 
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see
+	 * org.eclipse.jface.action.SubContributionManager#appendToGroup(java.lang
+	 * .String, org.eclipse.jface.action.IContributionItem)
+	 */
 	@Override
 	public void appendToGroup(String groupName, IContributionItem item) {
 		try {
@@ -147,7 +156,7 @@ public class EditorMenuManager extends SubMenuManager {
     public void setVisible(boolean visible, boolean forceVisibility) {
         if (visible) {
             if (forceVisibility) {
-                // Make the items visible
+                // Make the items visible 
                 if (!enabledAllowed) {
 					setEnabledAllowed(true);
 				}
@@ -184,8 +193,10 @@ public class EditorMenuManager extends SubMenuManager {
         overrides.updateEnabledAllowed();
     }
 
-    @Override
-	protected SubMenuManager wrapMenu(IMenuManager menu) {
+    /* (non-Javadoc)
+     * Method declared on SubMenuManager.
+     */
+    protected SubMenuManager wrapMenu(IMenuManager menu) {
         if (wrappers == null) {
 			wrappers = new ArrayList();
 		}
