@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2009 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -13,6 +13,7 @@ package org.eclipse.ui.internal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
+
 import org.eclipse.jface.action.IMenuCreator;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
@@ -29,50 +30,46 @@ import org.eclipse.ui.IWorkbenchPage;
 import org.eclipse.ui.IWorkbenchWindow;
 
 /**
- * The <code>NavigationHistoryAction</code> moves navigation history
+ * The <code>NavigationHistoryAction</code> moves navigation history 
  * back and forward.
  */
 public class NavigationHistoryAction extends PageEventAction {
 
 	private boolean recreateMenu;
-
+	
 	private boolean forward;
-
+    
     private Menu historyMenu;
 
     private int MAX_HISTORY_LENGTH = 9;
 
     private class MenuCreator implements IMenuCreator {
-        @Override
-		public void dispose() {
+        public void dispose() {
         }
 
-        @Override
-		public Menu getMenu(Menu parent) {
+        public Menu getMenu(Menu parent) {
         	setMenu(new Menu(parent));
         	fillMenu(historyMenu);
             initMenu();
             return historyMenu;
         }
 
-        @Override
-		public Menu getMenu(Control parent) {
+        public Menu getMenu(Control parent) {
         	setMenu(new Menu(parent));
         	fillMenu(historyMenu);
             initMenu();
             return historyMenu;
         }
-
+        
     }
 
     private void setMenu(Menu menu) {
     	historyMenu = menu;
     }
-
+    
     private void initMenu() {
     	historyMenu.addMenuListener(new MenuAdapter() {
-    		@Override
-			public void menuShown(MenuEvent e) {
+    		public void menuShown(MenuEvent e) {
     			if (recreateMenu) {
 					Menu m = (Menu) e.widget;
 					MenuItem[] items = m.getItems();
@@ -84,13 +81,13 @@ public class NavigationHistoryAction extends PageEventAction {
 			}
     	});
     }
-
+    
     private void fillMenu(Menu menu) {
     	IWorkbenchPage page = getWorkbenchWindow().getActivePage();
     	if (page == null) {
     		return;
     	}
-
+    	
     	final NavigationHistory history = (NavigationHistory) getWorkbenchWindow()
     	.getActivePage().getNavigationHistory();
     	NavigationHistoryEntry[] entries;
@@ -113,13 +110,11 @@ public class NavigationHistoryAction extends PageEventAction {
     			MenuItem item = new MenuItem(menu, SWT.NONE);
     			item.setData(entries[i]);
     			if (entriesCount[i] > 1) {
-					text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_locations, text,
-							Integer.valueOf(entriesCount[i]));
+    				text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_locations,text, new Integer(entriesCount[i]));
     			}
     			item.setText(text);
     			item.addSelectionListener(new SelectionAdapter() {
-    				@Override
-					public void widgetSelected(SelectionEvent e) {
+    				public void widgetSelected(SelectionEvent e) {
     					history
     					.shiftCurrentEntry(
     							(NavigationHistoryEntry) e.widget
@@ -130,9 +125,8 @@ public class NavigationHistoryAction extends PageEventAction {
     	}
     	recreateMenu = false;
     }
-
-    @Override
-	public void dispose() {
+    
+    public void dispose() {
     	super.dispose();
     	if (historyMenu != null) {
     		for (int i = 0; i < historyMenu.getItemCount(); i++) {
@@ -146,7 +140,7 @@ public class NavigationHistoryAction extends PageEventAction {
 
     /**
 	 * Create a new instance of <code>NavigationHistoryAction</code>
-	 *
+	 * 
 	 * @param window
 	 *            the workbench window this action applies to
 	 * @param forward
@@ -167,7 +161,7 @@ public class NavigationHistoryAction extends PageEventAction {
                     .getImageDescriptor(ISharedImages.IMG_TOOL_FORWARD_DISABLED));
             setActionDefinitionId(IWorkbenchCommandConstants.NAVIGATE_FORWARD_HISTORY);
         } else {
-            setText(WorkbenchMessages.NavigationHistoryAction_backward_text);
+            setText(WorkbenchMessages.NavigationHistoryAction_backward_text); 
             setToolTipText(WorkbenchMessages.NavigationHistoryAction_backward_toolTip);
             // @issue missing action id
             window.getWorkbench().getHelpSystem().setHelp(this,
@@ -184,8 +178,10 @@ public class NavigationHistoryAction extends PageEventAction {
         setMenuCreator(new MenuCreator());
     }
 
-    @Override
-	public void pageClosed(IWorkbenchPage page) {
+    /* (non-Javadoc)
+     * Method declared on PageEventAction.
+     */
+    public void pageClosed(IWorkbenchPage page) {
         super.pageClosed(page);
         setEnabled(false);
     }
@@ -215,8 +211,10 @@ public class NavigationHistoryAction extends PageEventAction {
         return (NavigationHistoryEntry[]) allEntries.toArray(entries);
     }
 
-    @Override
-	public void pageActivated(IWorkbenchPage page) {
+    /* (non-Javadoc)
+     * Method declared on PageEventAction.
+     */
+    public void pageActivated(IWorkbenchPage page) {
         super.pageActivated(page);
         NavigationHistory nh = (NavigationHistory) page.getNavigationHistory();
         if (forward) {
@@ -226,8 +224,10 @@ public class NavigationHistoryAction extends PageEventAction {
         }
     }
 
-    @Override
-	public void run() {
+    /* (non-Javadoc)
+     * Method declared on IAction.
+     */
+    public void run() {
         if (getWorkbenchWindow() == null) {
             // action has been disposed
             return;
@@ -260,7 +260,7 @@ public class NavigationHistoryAction extends PageEventAction {
             entries = history.getForwardEntries();
             if (entries.length > 0) {
                 NavigationHistoryEntry entry = entries[0];
-                String text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_forward_toolTipName, entry.getHistoryText() );
+                String text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_forward_toolTipName, entry.getHistoryText() ); 
                 setToolTipText(text);
             } else {
                 setToolTipText(WorkbenchMessages.NavigationHistoryAction_forward_toolTip);
@@ -270,10 +270,10 @@ public class NavigationHistoryAction extends PageEventAction {
             entries = history.getBackwardEntries();
             if (entries.length > 0) {
                 NavigationHistoryEntry entry = entries[0];
-                String text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_backward_toolTipName, entry.getHistoryText() );
+                String text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_backward_toolTipName, entry.getHistoryText() ); 
                 setToolTipText(text);
             } else {
-                setToolTipText(WorkbenchMessages.NavigationHistoryAction_backward_toolTip);
+                setToolTipText(WorkbenchMessages.NavigationHistoryAction_backward_toolTip); 
             }
         }
         recreateMenu = true;
