@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2015 IBM Corporation and others.
+ * Copyright (c) 2005, 2009 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,8 +10,6 @@
  *     Remy Chi Jian Suen <remy.suen@gmail.com> -
  *     		Bug 186522 - [KeyBindings] New Keys preference page does not resort by binding with conflicts
  *     		Bug 226342 - [KeyBindings] Keys preference page conflict table is hard to read
- *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 440810
- *     Cornel Izbasa <cizbasa@info.uvt.ro> - Bug 442215
  *******************************************************************************/
 
 package org.eclipse.ui.internal.keys;
@@ -21,6 +19,7 @@ import java.util.Collection;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.Map;
+
 import org.eclipse.core.commands.Category;
 import org.eclipse.core.commands.ParameterizedCommand;
 import org.eclipse.core.commands.util.Tracing;
@@ -129,7 +128,7 @@ import org.eclipse.ui.keys.IBindingService;
  * Updated in 3.4 to work with a model backed by the real KeyBinding and
  * ParameterizedCommand objects.
  * </p>
- *
+ * 
  * @since 3.2
  */
 public class NewKeysPreferencePage extends PreferencePage implements
@@ -150,7 +149,7 @@ public class NewKeysPreferencePage extends PreferencePage implements
 	/**
 	 * The number of items to show in the bindings table tree.
 	 */
-	private static final int ITEMS_TO_SHOW = 12;
+	private static final int ITEMS_TO_SHOW = 7;
 
 	private static final int COMMAND_NAME_COLUMN = 0;
 	private static final int KEY_SEQUENCE_COLUMN = 1;
@@ -176,7 +175,7 @@ public class NewKeysPreferencePage extends PreferencePage implements
 	private Label commandNameValueLabel;
 
 	private Text fBindingText;
-
+	
 	private Text fDescriptionText;
 
 	private ComboViewer fWhenCombo;
@@ -194,7 +193,7 @@ public class NewKeysPreferencePage extends PreferencePage implements
 	/**
 	 * A FilteredTree that provides a combo which is used to organize and
 	 * display elements in the tree according to the selected criteria.
-	 *
+	 * 
 	 */
 	protected class CategoryFilterTree extends FilteredTree {
 
@@ -202,7 +201,7 @@ public class NewKeysPreferencePage extends PreferencePage implements
 
 		/**
 		 * Constructor for PatternFilteredTree.
-		 *
+		 * 
 		 * @param parent
 		 * @param treeStyle
 		 * @param filter
@@ -211,7 +210,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 				CategoryPatternFilter filter) {
 			super(parent, treeStyle, filter, true);
 			this.filter = filter;
-			setQuickSelectionMode(true);
 		}
 
 		public void filterCategories(boolean b) {
@@ -230,7 +228,7 @@ public class NewKeysPreferencePage extends PreferencePage implements
 
 		public BindingModelComparator() {
 			for (int i = 0; i < NUM_OF_COLUMNS; i++) {
-				sortColumns.add(Integer.valueOf(i));
+				sortColumns.add(new Integer(i));
 			}
 		}
 
@@ -242,7 +240,7 @@ public class NewKeysPreferencePage extends PreferencePage implements
 			if (column == getSortColumn()) {
 				return;
 			}
-			Integer sortColumn = Integer.valueOf(column);
+			Integer sortColumn = new Integer(column);
 			sortColumns.remove(sortColumn);
 			sortColumns.addFirst(sortColumn);
 		}
@@ -262,7 +260,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 			this.ascending = ascending;
 		}
 
-		@Override
 		public final int compare(final Viewer viewer, final Object a,
 				final Object b) {
 			int result = 0;
@@ -315,7 +312,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 			this.column = column;
 		}
 
-		@Override
 		public void widgetSelected(SelectionEvent e) {
 			if (comparator.getSortColumn() == column) {
 				comparator.setAscending(!comparator.isAscending());
@@ -335,7 +331,11 @@ public class NewKeysPreferencePage extends PreferencePage implements
 	}
 
 	private static class ListLabelProvider extends LabelProvider {
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.LabelProvider#getText(java.lang.Object)
+		 */
 		public String getText(Object element) {
 			return ((ModelElement) element).getName();
 		}
@@ -349,17 +349,20 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		private final LocalResourceManager localResourceManager = new LocalResourceManager(
 				JFaceResources.getResources());
 
-		@Override
 		public final void dispose() {
 			super.dispose();
 			localResourceManager.dispose();
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.LabelProvider#getText(java.lang.Object)
+		 */
 		public String getText(Object element) {
 			String rc = getColumnText(element, 0);
 			if (rc == null) {
-				rc = super.getText(element);
+				super.getText(element);
 			}
 			StringBuffer buf = new StringBuffer(rc);
 			for (int i = 1; i < USER_DELTA_COLUMN; i++) {
@@ -372,7 +375,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 			return buf.toString();
 		}
 
-		@Override
 		public String getColumnText(Object element, int index) {
 			BindingElement bindingElement = ((BindingElement) element);
 			switch (index) {
@@ -402,7 +404,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 			return null;
 		}
 
-		@Override
 		public Image getColumnImage(Object element, int index) {
 			BindingElement be = (BindingElement) element;
 			switch (index) {
@@ -442,7 +443,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 	}
 
 	class ModelContentProvider implements ITreeContentProvider {
-		@Override
 		public Object[] getChildren(Object parentElement) {
 			if (parentElement instanceof BindingModel) {
 				return ((BindingModel) parentElement).getBindings().toArray();
@@ -456,34 +456,33 @@ public class NewKeysPreferencePage extends PreferencePage implements
 			return new Object[0];
 		}
 
-		@Override
 		public Object getParent(Object element) {
 			return ((ModelElement) element).getParent();
 		}
 
-		@Override
 		public boolean hasChildren(Object element) {
 			return (element instanceof BindingModel)
 					|| (element instanceof ContextModel)
 					|| (element instanceof SchemeModel);
 		}
 
-		@Override
 		public Object[] getElements(Object inputElement) {
 			return getChildren(inputElement);
 		}
 
-		@Override
 		public void dispose() {
 		}
 
-		@Override
 		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
 		}
 
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.preference.PreferencePage#createContents(org.eclipse.swt.widgets.Composite)
+	 */
 	protected Control createContents(Composite parent) {
 		PlatformUI.getWorkbench().getHelpSystem().setHelp(parent,
 				IWorkbenchHelpContextIds.KEYS_PREFERENCE_PAGE);
@@ -505,6 +504,7 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		createTree(page);
 		createTreeControls(page);
 		createDataControls(page);
+		createButtonBar(page);
 
 		fill();
 
@@ -517,21 +517,22 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		gc.setFont(fDescriptionText.getFont());
 		FontMetrics metrics = gc.getFontMetrics();
 		gc.dispose();
-		int height = metrics.getHeight() * 5 / 2;
-
+		int height = metrics.getHeight() * 4;
+		
 		GridData gridData = new GridData();
 		gridData.grabExcessHorizontalSpace = true;
 		gridData.horizontalAlignment = SWT.FILL;
 		gridData.horizontalSpan = 2;
 		gridData.heightHint = height;
 		fDescriptionText.setLayoutData(gridData);
-
+		
 		return page;
 	}
 
 	/**
-	 * Creates the button bar with "Filters..." and "Export CVS..." buttons.
-	 *
+	 * Creates the button bar across the bottom of the preference page. This
+	 * button bar contains the "Advanced..." button.
+	 * 
 	 * @param parent
 	 *            The composite in which the button bar should be placed; never
 	 *            <code>null</code>.
@@ -549,7 +550,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		buttonBar.setLayout(layout);
 		gridData = new GridData();
 		gridData.horizontalAlignment = SWT.END;
-		gridData.grabExcessHorizontalSpace = true;
 		buttonBar.setLayoutData(gridData);
 
 		// Advanced button.
@@ -561,11 +561,9 @@ public class NewKeysPreferencePage extends PreferencePage implements
 				SWT.DEFAULT, SWT.DEFAULT, true).x) + 5;
 		filtersButton.setLayoutData(gridData);
 		filtersButton.addSelectionListener(new SelectionListener() {
-			@Override
 			public void widgetDefaultSelected(SelectionEvent e) {
 			}
 
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				KeysPreferenceFiltersDialog dialog = new KeysPreferenceFiltersDialog(
 						getShell());
@@ -601,11 +599,9 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		exportButton.setLayoutData(gridData);
 		exportButton.addSelectionListener(new SelectionListener() {
 
-			@Override
 			public void widgetDefaultSelected(SelectionEvent e) {
 			}
 
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				keyController.exportCSV(((Button) e.getSource()).getShell());
 			}
@@ -652,13 +648,13 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		gridData.horizontalSpan = 2;
 		gridData.horizontalAlignment = SWT.FILL;
 		commandNameValueLabel.setLayoutData(gridData);
-
+		
 		final Label commandDescriptionlabel = new Label(leftDataArea, SWT.LEAD);
 		commandDescriptionlabel.setText(NewKeysPreferenceMessages.CommandDescriptionLabel_Text);
 		gridData = new GridData();
 		gridData.verticalAlignment = SWT.BEGINNING;
 		commandDescriptionlabel.setLayoutData(gridData);
-
+		
 		fDescriptionText = new Text(leftDataArea, SWT.MULTI | SWT.WRAP
 				| SWT.BORDER | SWT.READ_ONLY);
 
@@ -675,18 +671,15 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		fBindingText.setLayoutData(gridData);
 
 		fBindingText.addFocusListener(new FocusListener() {
-			@Override
 			public void focusGained(FocusEvent e) {
 				fBindingService.setKeyFilterEnabled(false);
 			}
 
-			@Override
 			public void focusLost(FocusEvent e) {
 				fBindingService.setKeyFilterEnabled(true);
 			}
 		});
 		fBindingText.addDisposeListener(new DisposeListener() {
-			@Override
 			public void widgetDisposed(DisposeEvent e) {
 				if (!fBindingService.isKeyFilterEnabled()) {
 					fBindingService.setKeyFilterEnabled(true);
@@ -698,7 +691,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		fKeySequenceText.setKeyStrokeLimit(4);
 		fKeySequenceText
 				.addPropertyChangeListener(new IPropertyChangeListener() {
-					@Override
 					public final void propertyChange(
 							final PropertyChangeEvent event) {
 						if (!event.getOldValue().equals(event.getNewValue())) {
@@ -751,7 +743,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 			menuItem.setText(trappedKey.format());
 			menuItem.addSelectionListener(new SelectionAdapter() {
 
-				@Override
 				public void widgetSelected(SelectionEvent e) {
 					fKeySequenceText.insert(trappedKey);
 					fBindingText.setFocus();
@@ -761,7 +752,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		}
 		addKeyButton.addSelectionListener(new SelectionAdapter() {
 
-			@Override
 			public void widgetSelected(SelectionEvent selectionEvent) {
 				Point buttonLocation = addKeyButton.getLocation();
 				buttonLocation = dataArea.toDisplay(buttonLocation.x,
@@ -783,14 +773,13 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		gridData.grabExcessHorizontalSpace = true;
 		gridData.horizontalAlignment = SWT.FILL;
 		gridData.horizontalSpan = 2;
-		gridData.widthHint = 200;
 		ViewerComparator comparator = new ViewerComparator();
 		fWhenCombo.setComparator(comparator);
+		fWhenCombo.getCombo().setVisibleItemCount(ITEMS_TO_SHOW);
 		fWhenCombo.getCombo().setLayoutData(gridData);
 		fWhenCombo.setContentProvider(new ModelContentProvider());
 		fWhenCombo.setLabelProvider(new ListLabelProvider());
 		fWhenCombo.addSelectionChangedListener(new ISelectionChangedListener() {
-			@Override
 			public final void selectionChanged(final SelectionChangedEvent event) {
 				ContextElement context = (ContextElement) ((IStructuredSelection) event
 						.getSelection()).getFirstElement();
@@ -802,7 +791,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		IPropertyChangeListener whenListener = new IPropertyChangeListener() {
 
 			// Sets the combo selection when a new keybinding is selected?
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				if (event.getSource() == keyController.getContextModel()
 						&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
@@ -825,7 +813,7 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		rightDataArea.setLayoutData(gridData);
 
 		new Label(rightDataArea, SWT.NONE); // filler
-
+		
 		// The description label.
 		final Label descriptionLabel = new Label(rightDataArea, SWT.NONE);
 		descriptionLabel.setText(NewKeysPreferenceMessages.ConflictsLabel_Text);
@@ -853,7 +841,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		table.setLayout(tableLayout);
 		conflictViewer.setContentProvider(new IStructuredContentProvider() {
 
-			@Override
 			public Object[] getElements(Object inputElement) {
 				if (inputElement instanceof Collection) {
 					return ((Collection) inputElement).toArray();
@@ -861,17 +848,14 @@ public class NewKeysPreferencePage extends PreferencePage implements
 				return new Object[0];
 			}
 
-			@Override
 			public void dispose() {
 			}
 
-			@Override
 			public void inputChanged(Viewer viewer, Object oldInput,
 					Object newInput) {
 			}
 		});
 		conflictViewer.setLabelProvider(new BindingElementLabelProvider() {
-			@Override
 			public String getColumnText(Object o, int index) {
 				BindingElement element = (BindingElement) o;
 				if (index == 0) {
@@ -885,7 +869,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 
 					// When the conflict viewer's selection changes, update the
 					// model's current selection
-					@Override
 					public void selectionChanged(SelectionChangedEvent event) {
 						ModelElement binding = (ModelElement) ((IStructuredSelection) event
 								.getSelection()).getFirstElement();
@@ -920,7 +903,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 				});
 
 		IPropertyChangeListener conflictsListener = new IPropertyChangeListener() {
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				if (event.getSource() == keyController.getConflictModel()
 						&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
@@ -947,7 +929,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 
 		IPropertyChangeListener dataUpdateListener = new IPropertyChangeListener() {
 
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				BindingElement bindingElement = null;
 				boolean weCare = false;
@@ -1065,7 +1046,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 
 			// When the viewer changes selection, update the model's current
 			// selection
-			@Override
 			public void selectionChanged(SelectionChangedEvent event) {
 				ModelElement binding = (ModelElement) ((IStructuredSelection) event
 						.getSelection()).getFirstElement();
@@ -1076,7 +1056,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		IPropertyChangeListener treeUpdateListener = new IPropertyChangeListener() {
 
 			// When the model changes a property, update the viewer
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				if (event.getSource() == keyController.getBindingModel()
 						&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
@@ -1136,7 +1115,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 				SWT.DEFAULT, SWT.DEFAULT, true).x) + 5;
 		addBindingButton.setLayoutData(gridData);
 		addBindingButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public final void widgetSelected(final SelectionEvent event) {
 				keyController.getBindingModel().copy();
 			}
@@ -1151,7 +1129,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 				.computeSize(SWT.DEFAULT, SWT.DEFAULT, true).x) + 5;
 		removeBindingButton.setLayoutData(gridData);
 		removeBindingButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public final void widgetSelected(final SelectionEvent event) {
 				keyController.getBindingModel().remove();
 			}
@@ -1165,7 +1142,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 				SWT.DEFAULT, SWT.DEFAULT, true).x) + 5;
 		restore.setLayoutData(gridData);
 		restore.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public final void widgetSelected(final SelectionEvent event) {
 				try {
 					fFilteredTree.setRedraw(false);
@@ -1178,12 +1154,11 @@ public class NewKeysPreferencePage extends PreferencePage implements
 			}
 		});
 
-		createButtonBar(treeControls);
 		return treeControls;
 	}
 
 	/**
-	 *
+	 * 
 	 */
 	private void fill() {
 		fSchemeCombo.setInput(keyController.getSchemeModel());
@@ -1217,12 +1192,10 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		fSchemeCombo.getCombo().setLayoutData(gridData);
 		fSchemeCombo
 				.addSelectionChangedListener(new ISelectionChangedListener() {
-					@Override
 					public final void selectionChanged(
 							final SelectionChangedEvent event) {
 						BusyIndicator.showWhile(fFilteredTree.getViewer()
 								.getTree().getDisplay(), new Runnable() {
-							@Override
 							public void run() {
 								SchemeElement scheme = (SchemeElement) ((IStructuredSelection) event
 										.getSelection()).getFirstElement();
@@ -1234,7 +1207,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 				});
 		IPropertyChangeListener listener = new IPropertyChangeListener() {
 
-			@Override
 			public void propertyChange(PropertyChangeEvent event) {
 				if (event.getSource() == keyController.getSchemeModel()
 						&& CommonModel.PROP_SELECTED_ELEMENT.equals(event
@@ -1250,22 +1222,25 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		keyController.addPropertyChangeListener(listener);
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.ui.IWorkbenchPreferencePage#init(org.eclipse.ui.IWorkbench)
+	 */
 	public void init(IWorkbench workbench) {
 		keyController = new KeyController();
 		keyController.init(workbench);
 
-		commandService = workbench
+		commandService = (ICommandService) workbench
 				.getService(ICommandService.class);
 		fDefaultCategory = commandService.getCategory(null);
-		fBindingService = workbench
+		fBindingService = (IBindingService) workbench
 				.getService(IBindingService.class);
 
-		commandImageService = workbench
+		commandImageService = (ICommandImageService) workbench
 				.getService(ICommandImageService.class);
 	}
 
-	@Override
 	public void applyData(Object data) {
 		if (data instanceof ModelElement) {
 			keyController.getBindingModel().setSelectedElement(
@@ -1279,7 +1254,7 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		}
 		if (data instanceof ParameterizedCommand) {
 			Map commandToElement = keyController.getBindingModel().getCommandToElement();
-
+			
 			BindingElement be = (BindingElement)commandToElement.get(data);
 			if(be != null) {
 				fFilteredTree.getViewer().setSelection(new StructuredSelection(be),
@@ -1288,7 +1263,11 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.preference.PreferencePage#performOk()
+	 */
 	public boolean performOk() {
 		keyController.saveBindings(fBindingService);
 		saveState(getDialogSettings());
@@ -1297,7 +1276,7 @@ public class NewKeysPreferencePage extends PreferencePage implements
 
 	/**
 	 * Save the state of the receiver.
-	 *
+	 * 
 	 * @param dialogSettings
 	 */
 	public void saveState(IDialogSettings dialogSettings) {
@@ -1323,7 +1302,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 		return settings;
 	}
 
-	@Override
 	protected final void performDefaults() {
 
 		// Ask the user to confirm
@@ -1341,7 +1319,6 @@ public class NewKeysPreferencePage extends PreferencePage implements
 			fFilteredTree.setRedraw(false);
 			BusyIndicator.showWhile(fFilteredTree.getViewer().getTree()
 					.getDisplay(), new Runnable() {
-				@Override
 				public void run() {
 					keyController.setDefaultBindings(fBindingService);
 				}
