@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2015 IBM Corporation and others.
+ * Copyright (c) 2005, 2009 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -23,10 +23,10 @@ import org.eclipse.jface.dialogs.Dialog;
 import org.eclipse.jface.dialogs.IDialogConstants;
 import org.eclipse.jface.dialogs.IDialogSettings;
 import org.eclipse.jface.dialogs.MessageDialog;
-import org.eclipse.jface.layout.LayoutConstants;
 import org.eclipse.jface.viewers.CheckStateChangedEvent;
 import org.eclipse.jface.viewers.CheckboxTreeViewer;
 import org.eclipse.jface.viewers.ICheckStateListener;
+import org.eclipse.jface.viewers.ISelection;
 import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.SelectionChangedEvent;
@@ -62,7 +62,7 @@ import org.eclipse.ui.model.WorkbenchLabelProvider;
 
 /**
  * Base class for preference export/import pages.
- *
+ * 
  * @since 3.1
  */
 public abstract class WizardPreferencesPage extends WizardPage implements
@@ -76,7 +76,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	private Button overwriteExistingFilesCheckbox;
 
 	protected FilteredTree transfersTree;
-
+	
 	protected Text descText;
 
 	private Composite buttonComposite;
@@ -108,7 +108,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	protected static final int COMBO_HISTORY_LENGTH = 5;
 
-
+    
 	/**
 	 * @param pageName
 	 */
@@ -126,7 +126,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * assumed to be a GridLayout and the number of columns in this layout is
 	 * incremented. Subclasses may override.
 	 * </p>
-	 *
+	 * 
 	 * @param parent
 	 *            the parent composite
 	 * @param id
@@ -148,7 +148,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		setButtonLayoutData(button);
 
-		button.setData(Integer.valueOf(id));
+		button.setData(new Integer(id));
 		button.setText(label);
 
 		if (defaultButton) {
@@ -163,7 +163,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	/**
 	 * Add the passed value to self's destination widget's history
-	 *
+	 * 
 	 * @param value
 	 *            java.lang.String
 	 */
@@ -171,14 +171,16 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		destinationNameField.add(value);
 	}
 
-	@Override
+	/**
+	 * (non-Javadoc) Method declared on IDialogPage.
+	 */
 	public void createControl(Composite parent) {
 		initializeDialogUnits(parent);
 		Composite composite = new Composite(parent, SWT.NULL);
 		composite.setLayout(new GridLayout());
 		composite.setLayoutData(new GridData(GridData.VERTICAL_ALIGN_FILL
 				| GridData.HORIZONTAL_ALIGN_FILL));
-
+		
 
 		createTransferArea(composite);
 		setPreferenceTransfers();
@@ -226,7 +228,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	private String getNoOptionsMessage() {
 		return PreferencesMessages.WizardPreferencesPage_noOptionsSelected;
 	}
-
+	
 	protected boolean validDestination() {
 		File file = new File(getDestinationValue());
 		return !(file.getPath().length() <= 0 || file.isDirectory());
@@ -254,11 +256,11 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		transferAllButton = new Button(composite, SWT.CHECK);
 		transferAllButton.setText(getAllButtonText());
-
+		
 		group = new Group(composite, SWT.NONE);
 		GridData groupData = new GridData(GridData.FILL_BOTH);
 		groupData.horizontalSpan = 2;
-		groupData.horizontalIndent = LayoutConstants.getIndent();
+		groupData.horizontalIndent = IDialogConstants.INDENT;
 		Object compositeLayout = composite.getLayout();
 		if (compositeLayout instanceof GridLayout) {
 			groupData.horizontalIndent -= ((GridLayout) compositeLayout).marginWidth;
@@ -268,7 +270,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		GridLayout layout = new GridLayout();
 		group.setLayout(layout);
-
+		
 		transfersTree = createFilteredTree(group);
 
 		transfersTree.setLayoutData(new GridData(GridData.FILL_BOTH));
@@ -280,15 +282,14 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		Label description = new Label(group, SWT.NONE);
 		description.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
 		description.setText(PreferencesMessages.WizardPreferences_description);
-
+		
 		descText = new Text(group, SWT.V_SCROLL | SWT.READ_ONLY
 				| SWT.BORDER | SWT.WRAP);
 		GridData descriptionData = new GridData(GridData.FILL_BOTH);
 		descriptionData.heightHint = convertHeightInCharsToPixels(3);
 		descText.setLayoutData(descriptionData);
-
+		
 		transferAllButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				if (transferAllButton.getSelection()) {
 					viewer.setAllChecked(false);
@@ -300,14 +301,12 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		viewer.addSelectionChangedListener(new ISelectionChangedListener() {
 
-			@Override
 			public void selectionChanged(SelectionChangedEvent event) {
 				updateDescription();
 			}
 		});
 
 		viewer.addCheckStateListener(new ICheckStateListener() {
-			@Override
 			public void checkStateChanged(CheckStateChangedEvent event) {
 				transferAllButton.setSelection(false);
 				updateEnablement();
@@ -320,10 +319,11 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	}
 
 	protected void updateDescription() {
-		IStructuredSelection selection = viewer.getStructuredSelection();
+		ISelection selection = viewer.getSelection();
 		String desc = ""; //$NON-NLS-1$
 		if (!selection.isEmpty()) {
-			Object element = selection.getFirstElement();
+			Object element = ((IStructuredSelection) selection)
+					.getFirstElement();
 			if ((element instanceof PreferenceTransferElement)) {
 				desc = ((PreferenceTransferElement) element).getDescription();
 			}
@@ -335,7 +335,6 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		int style = SWT.SINGLE | SWT.H_SCROLL | SWT.V_SCROLL | SWT.BORDER;
 		FilteredTree transfersTree = new FilteredTree(group, style,
 				new PatternFilter(), true) {
-			@Override
 			protected TreeViewer doCreateTreeViewer(Composite parent, int style) {
 				return new CheckboxTreeViewer(parent, style);
 			}
@@ -349,7 +348,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	/**
 	 * Add the selection and deselection buttons to the composite.
-	 *
+	 * 
 	 * @param composite
 	 *            org.eclipse.swt.widgets.Composite
 	 */
@@ -363,14 +362,12 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		data.grabExcessHorizontalSpace = true;
 		buttonComposite.setLayoutData(data);
 		buttonComposite.setFont(parentFont);
-
-		selectAllButton = new Button(buttonComposite, SWT.PUSH);
-		selectAllButton.setText(PreferencesMessages.SelectionDialog_selectLabel);
-		selectAllButton.setData(Integer.valueOf(IDialogConstants.SELECT_ALL_ID));
-		setButtonLayoutData(selectAllButton);
+		
+		selectAllButton = createButton(buttonComposite,
+				IDialogConstants.SELECT_ALL_ID,
+				PreferencesMessages.SelectionDialog_selectLabel, false);
 
 		SelectionListener listener = new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				viewer.setAllChecked(true);
 				updatePageCompletion();
@@ -378,14 +375,12 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		};
 		selectAllButton.addSelectionListener(listener);
 		selectAllButton.setFont(parentFont);
-
-		deselectAllButton = new Button(buttonComposite, SWT.PUSH);
-		deselectAllButton.setText(PreferencesMessages.SelectionDialog_deselectLabel);
-		deselectAllButton.setData(Integer.valueOf(IDialogConstants.DESELECT_ALL_ID));
-		setButtonLayoutData(deselectAllButton);
+		
+		deselectAllButton = createButton(buttonComposite,
+				IDialogConstants.DESELECT_ALL_ID,
+				PreferencesMessages.SelectionDialog_deselectLabel, false);
 
 		listener = new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				viewer.setAllChecked(false);
 				updatePageCompletion();
@@ -404,7 +399,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	/**
 	 * Create the export destination specification widgets
-	 *
+	 * 
 	 * @param parent
 	 *            org.eclipse.swt.widgets.Composite
 	 */
@@ -416,10 +411,10 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		destinationSelectionGroup.setLayout(layout);
 		destinationSelectionGroup.setLayoutData(new GridData(
 				GridData.HORIZONTAL_ALIGN_FILL | GridData.VERTICAL_ALIGN_FILL));
-
+		
 		Label dest = new Label(destinationSelectionGroup, SWT.NONE);
 		dest.setText(getDestinationLabel());
-
+		
 		// destination name entry field
 		destinationNameField = new Combo(destinationSelectionGroup, SWT.SINGLE
 				| SWT.BORDER);
@@ -428,7 +423,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		GridData data = new GridData(GridData.HORIZONTAL_ALIGN_FILL
 				| GridData.GRAB_HORIZONTAL);
 		destinationNameField.setLayoutData(data);
-
+		
 		// destination browse button
 		destinationBrowseButton = new Button(destinationSelectionGroup,
 				SWT.PUSH);
@@ -436,38 +431,38 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 				.setText(PreferencesMessages.PreferencesExport_browse);
 		setButtonLayoutData(destinationBrowseButton);
 		destinationBrowseButton.addListener(SWT.Selection, this);
-
+		
 		new Label(parent, SWT.NONE); // vertical spacer
 	}
 
 	/**
 	 * Create the export options specification widgets.
-	 *
+	 * 
 	 * @param parent
 	 *            org.eclipse.swt.widgets.Composite
 	 */
 	protected void createOptionsGroup(Composite parent) {
 		// options group
-
+	
 		Composite optionsGroup = new Composite(parent, SWT.NONE);
 		GridLayout layout = new GridLayout();
 		layout.marginHeight = 0;
 		optionsGroup.setLayout(layout);
 		optionsGroup.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_FILL
 				| GridData.GRAB_HORIZONTAL));
-
+	
 		// overwrite... checkbox
 		overwriteExistingFilesCheckbox = new Button(optionsGroup, SWT.CHECK
 				| SWT.LEFT);
 		overwriteExistingFilesCheckbox
 				.setText(PreferencesMessages.ExportFile_overwriteExisting);
-
+		
 	}
 
 	/**
 	 * Attempts to ensure that the specified directory exists on the local file
 	 * system. Answers a boolean indicating success.
-	 *
+	 * 
 	 * @return boolean
 	 * @param directory
 	 *            java.io.File
@@ -495,7 +490,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	/**
 	 * Displays a Yes/No question to the user with the specified message and
 	 * returns the user's response.
-	 *
+	 * 
 	 * @param message
 	 *            the question to ask
 	 * @return <code>true</code> for Yes, and <code>false</code> for No
@@ -505,7 +500,6 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 				PreferencesMessages.Question, (Image) null, message,
 				MessageDialog.NONE, new String[] { IDialogConstants.YES_LABEL,
 						IDialogConstants.NO_LABEL }, 0) {
-			@Override
 			protected int getShellStyle() {
 				return super.getShellStyle() | SWT.SHEET;
 			}
@@ -519,7 +513,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * If the target for export does not exist then attempt to create it. Answer
 	 * a boolean indicating whether the target exists (ie.- if it either
 	 * pre-existed or this method was able to create it)
-	 *
+	 * 
 	 * @return boolean
 	 */
 	protected boolean ensureTargetIsValid(File file) {
@@ -543,6 +537,11 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		return true;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.ui.dialogs.WizardDataTransferPage#saveWidgetValues()
+	 */
 	protected void saveWidgetValues() {
 
 		IDialogSettings settings = getDialogSettings();
@@ -552,7 +551,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 			if (directoryNames == null) {
 				directoryNames = new String[0];
 			}
-
+		
 			directoryNames = addToHistory(directoryNames, getDestinationValue());
 			settings.put(STORE_DESTINATION_NAMES_ID, directoryNames);
 			String current = getDestinationValue();
@@ -579,7 +578,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 					settings.put(TRANSFER_PREFERENCES_NAMES_ID, preferenceIds);
 				}
 			}
-
+		
 		}
 	}
 
@@ -587,7 +586,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * The Finish button was pressed. Try to do the required work now and answer
 	 * a boolean indicating success. If false is returned then the wizard will
 	 * not close.
-	 *
+	 * 
 	 * @return boolean
 	 */
 	public boolean finish() {
@@ -604,13 +603,11 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 			// all nodes of the Instance and Configuration scopes
 			transfers[0] = new IPreferenceFilter() {
 
-				@Override
 				public String[] getScopes() {
 					return new String[] { InstanceScope.SCOPE,
 							ConfigurationScope.SCOPE };
 				}
 
-				@Override
 				public Map getMapping(String scope) {
 					return null;
 				}
@@ -689,14 +686,14 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * include their controls in this determination should override the hook
 	 * methods <code>validateSourceGroup</code> and/or
 	 * <code>validateOptionsGroup</code>.
-	 *
+	 * 
 	 * @return <code>true</code> if this page is complete, and
 	 *         <code>false</code> if incomplete
 	 * @see #validateSourceGroup
 	 * @see #validateOptionsGroup
 	 */
 	protected boolean determinePageCompletion() {
-
+		
 		// validate groups in order of priority so error message is the most important one
 		boolean complete = validateSourceGroup() && validateDestinationGroup()
 				&& validateOptionsGroup();
@@ -717,11 +714,11 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * contain valid values.
 	 * <p>
 	 * The <code>WizardPreferencesPage</code> implementation of this method
-	 * returns <code>true</code> if the button to transfer all preferences is
-	 * selected OR at least one of the individual items are checked. Subclasses
+	 * returns <code>true</code> if the button to transfer all preferences is 
+	 * selected OR at least one of the individual items are checked. Subclasses 
 	 * may reimplement this method.
 	 * </p>
-	 *
+	 * 
 	 * @return <code>true</code> indicating validity of all controls in the
 	 *         options group
 	 */
@@ -745,7 +742,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * returns <code>true</code>. Subclasses may reimplement this hook
 	 * method.
 	 * </p>
-	 *
+	 * 
 	 * @return <code>true</code> indicating validity of all controls in the
 	 *         source specification group
 	 */
@@ -755,14 +752,14 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	/**
 	 * Answer the string to display in self as the destination type
-	 *
+	 * 
 	 * @return java.lang.String
 	 */
 	protected abstract String getDestinationLabel();
 
 	/**
 	 * Answer the contents of self's destination specification widget
-	 *
+	 * 
 	 * @return java.lang.String
 	 */
 	protected String getDestinationValue() {
@@ -799,11 +796,10 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	/**
 	 * Handle all events and enablements for widgets in this page
-	 *
+	 * 
 	 * @param e
 	 *            Event
 	 */
-	@Override
 	public void handleEvent(Event e) {
 		Widget source = e.widget;
 
@@ -932,7 +928,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	/**
 	 * Set the contents of self's destination specification widget to the passed
 	 * value
-	 *
+	 * 
 	 * @param value
 	 *            java.lang.String
 	 */
@@ -940,12 +936,21 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		destinationNameField.setText(value);
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.dialogs.DialogPage#dispose()
+	 */
 	public void dispose() {
 		super.dispose();
 		transfers = null;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.ui.dialogs.WizardDataTransferPage#allowNewContainerName()
+	 */
 	protected boolean allowNewContainerName() {
 		return true;
 	}
@@ -954,12 +959,11 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * The <code>WizardDataTransfer</code> implementation of this
 	 * <code>IOverwriteQuery</code> method asks the user whether the existing
 	 * resource at the given path should be overwritten.
-	 *
+	 * 
 	 * @param pathString
 	 * @return the user's reply: one of <code>"YES"</code>, <code>"NO"</code>,
 	 *         <code>"ALL"</code>, or <code>"CANCEL"</code>
 	 */
-	@Override
 	public String queryOverwrite(String pathString) {
 
 		Path path = new Path(pathString);
@@ -987,7 +991,6 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 						IDialogConstants.NO_LABEL,
 						IDialogConstants.NO_TO_ALL_LABEL,
 						IDialogConstants.CANCEL_LABEL }, 0) {
-			@Override
 			protected int getShellStyle() {
 				return super.getShellStyle() | SWT.SHEET;
 			}
@@ -996,7 +999,6 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		// run in syncExec because callback is from an operation,
 		// which is probably not running in the UI thread.
 		getControl().getDisplay().syncExec(new Runnable() {
-			@Override
 			public void run() {
 				dialog.open();
 			}
