@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2015 IBM Corporation and others.
+ * Copyright (c) 2005, 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -28,7 +28,7 @@ public class Adventure extends ModelObject {
 	private String description;
 
 	private String location;
-
+	
 	private int maxNumberOfPeople;
 
 	public String getName() {
@@ -40,20 +40,19 @@ public class Adventure extends ModelObject {
 		name = string;
 		firePropertyChange("name", oldValue, name);
 	}
-
+	
 	public int getMaxNumberOfPeople(){
 		return maxNumberOfPeople;
 	}
-
+	
 	public void setMaxNumberOfPeople(int anInt) {
 		int oldValue = maxNumberOfPeople;
 		maxNumberOfPeople = anInt;
 		firePropertyChange("maxNumberOfPeople", oldValue, maxNumberOfPeople);
 	}
-
+	
 	public IValidator getMaxNumberOfPeopleDomainValidator() {
 		return new IValidator() {
-			@Override
 			public IStatus validate(Object value) {
 				int intValue = ((Integer)value).intValue();
 				if (intValue < 1 || intValue > 20) {
@@ -88,7 +87,7 @@ public class Adventure extends ModelObject {
 	public void setPetsAllowed(boolean b) {
 		boolean oldValue = petsAllowed;
 		petsAllowed = b;
-		firePropertyChange("petsAllowed", Boolean.valueOf(oldValue), Boolean.valueOf(
+		firePropertyChange("petsAllowed", new Boolean(oldValue), new Boolean(
 				petsAllowed));
 	}
 
