@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2016 Tom Schindl and others.
+ * Copyright (c) 2006 Tom Schindl and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,8 +7,6 @@
  *
  * Contributors:
  *     Tom Schindl - initial API and implementation
- *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 414565, 489234
- *     Simon Scholz <simon.scholz@vogella.com> - Bug 442343
  *******************************************************************************/
 
 package org.eclipse.jface.snippets.viewers;
@@ -16,10 +14,11 @@ package org.eclipse.jface.snippets.viewers;
 
 import org.eclipse.jface.action.Action;
 import org.eclipse.jface.action.MenuManager;
-import org.eclipse.jface.viewers.ArrayContentProvider;
+import org.eclipse.jface.viewers.IStructuredContentProvider;
 import org.eclipse.jface.viewers.ITableLabelProvider;
 import org.eclipse.jface.viewers.LabelProvider;
 import org.eclipse.jface.viewers.TableViewer;
+import org.eclipse.jface.viewers.Viewer;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.layout.FillLayout;
@@ -31,68 +30,96 @@ import org.eclipse.swt.widgets.TableColumn;
 /**
  * Example usage of none mandatory interfaces of ITableFontProvider and
  * ITableColorProvider
- *
+ * 
+ * @author Tom Schindl <tom.schindl@bestsolution.at>
  * @since 3.2
  */
 public class Snippet017TableViewerHideShowColumns {
 	private class ShrinkThread extends Thread {
 		private int width = 0;
 		private TableColumn column;
-
+		
 		public ShrinkThread(int width, TableColumn column) {
 			super();
 			this.width = width;
 			this.column = column;
 		}
-
-		@Override
+		
 		public void run() {
 			column.getDisplay().syncExec(new Runnable() {
 
-				@Override
 				public void run() {
-					column.setData("restoredWidth", Integer.valueOf(width));
+					column.setData("restoredWidth", new Integer(width));
 				}
 			});
-
+			
 			for( int i = width; i >= 0; i-- ) {
 				final int index = i;
 				column.getDisplay().syncExec(new Runnable() {
 
-					@Override
 					public void run() {
 						column.setWidth(index);
 					}
-
+					
 				});
 			}
 		}
 	};
-
+	
 	private class ExpandThread extends Thread {
 		private int width = 0;
 		private TableColumn column;
-
+		
 		public ExpandThread(int width, TableColumn column) {
 			super();
 			this.width = width;
 			this.column = column;
 		}
-
-		@Override
+		
 		public void run() {
 			for( int i = 0; i <= width; i++ ) {
 				final int index = i;
 				column.getDisplay().syncExec(new Runnable() {
 
-					@Override
 					public void run() {
 						column.setWidth(index);
 					}
-
+					
 				});
 			}
 		}
+	}
+	
+	private class MyContentProvider implements IStructuredContentProvider {
+
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IStructuredContentProvider#getElements(java.lang.Object)
+		 */
+		public Object[] getElements(Object inputElement) {
+			return (MyModel[]) inputElement;
+		}
+
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IContentProvider#dispose()
+		 */
+		public void dispose() {
+
+		}
+
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IContentProvider#inputChanged(org.eclipse.jface.viewers.Viewer,
+		 *      java.lang.Object, java.lang.Object)
+		 */
+		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
+
+		}
+
 	}
 
 	public class MyModel {
@@ -102,7 +129,6 @@ public class Snippet017TableViewerHideShowColumns {
 			this.counter = counter;
 		}
 
-		@Override
 		public String toString() {
 			return "Item " + this.counter;
 		}
@@ -111,12 +137,10 @@ public class Snippet017TableViewerHideShowColumns {
 	public class MyLabelProvider extends LabelProvider implements
 			ITableLabelProvider {
 
-		@Override
 		public Image getColumnImage(Object element, int columnIndex) {
 			return null;
 		}
 
-		@Override
 		public String getColumnText(Object element, int columnIndex) {
 			return "Column " + columnIndex + " => " + element.toString();
 		}
@@ -126,7 +150,7 @@ public class Snippet017TableViewerHideShowColumns {
 		final TableViewer v = new TableViewer(shell, SWT.BORDER
 				| SWT.FULL_SELECTION);
 		v.setLabelProvider(new MyLabelProvider());
-		v.setContentProvider(ArrayContentProvider.getInstance());
+		v.setContentProvider(new MyContentProvider());
 
 		TableColumn column = new TableColumn(v.getTable(), SWT.NONE);
 		column.setWidth(200);
@@ -135,7 +159,7 @@ public class Snippet017TableViewerHideShowColumns {
 		column = new TableColumn(v.getTable(), SWT.NONE);
 		column.setWidth(200);
 		column.setText("Column 2");
-
+		
 		column = new TableColumn(v.getTable(), SWT.NONE);
 		column.setWidth(200);
 		column.setText("Column 3");
@@ -150,12 +174,11 @@ public class Snippet017TableViewerHideShowColumns {
 	private void addMenu(TableViewer v) {
 		final MenuManager mgr = new MenuManager();
 		Action action;
-
+		
 		for( int i = 0; i < v.getTable().getColumnCount(); i++ ) {
 			final TableColumn column = v.getTable().getColumn(i);
-
+			
 			action = new Action(v.getTable().getColumn(i).getText(),SWT.CHECK) {
-				@Override
 				public void runWithEvent(Event event) {
 					if( ! isChecked() ) {
 						ShrinkThread t = new ShrinkThread(column.getWidth(),column);
@@ -165,17 +188,17 @@ public class Snippet017TableViewerHideShowColumns {
 						t.run();
 					}
 				}
-
+				
 			};
 			action.setChecked(true);
 			mgr.add(action);
 		}
-
+		
 		v.getControl().setMenu(mgr.createContextMenu(v.getControl()));
 	}
-
-
-
+	
+	
+	
 	private MyModel[] createModel() {
 		MyModel[] elements = new MyModel[10];
 
